--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Document</title>
+	</head>
+	<body>
+		<h1>我的网页</h1>
+		<a href="http://www.baidu.com">百度</a>
+		<img src="./2047933.jpg" width="1400">
+	</body>
+</html>
