--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<body>
 		<h1>我的网页</h1>
 		<a href="http://www.baidu.com">百度</a>
+		<a href="https://leetcode-cn.com">力扣</a>
+		<a href="https://douyin.com">
 		<img src="./2047933.jpg" width="1400">
+		</a>
 	</body>
 </html>
