--- a/index.html
+++ b/index.html
@@ -7,10 +7,44 @@
 	</head>
 	<body>
 		<h1>我的网页</h1>
-		<a href="http://www.baidu.com">百度</a>
-		<a href="https://leetcode-cn.com">力扣</a>
-		<a href="https://douyin.com">
+		<a href="http://www.baidu.com"><b>百度</b><br/></a>
+		<table>
+			<caption>成员分布</caption>
+			<thead>
+				<tr>
+					<th>姓名</th>
+					<th>爱好</th>
+					<th>特长</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th>li</th>
+					<th>王者荣耀</th>
+					<th>无</th>
+				</tr>
+				<tr>
+					<th>wang</th>
+					<th>王者荣耀</th>
+					<th>无</th>
+				</tr>
+				<tr>
+					<th>che</th>
+					<th>王者荣耀</th>
+					<th>无</th>
+				</tr>
+				<tr>
+					<th>wang</th>
+					<th>王者荣耀</th>
+					<th>无</th>
+				</tr>
+			</tbody>
+			<tfoot>
+				<tr>
+					<th>总结：废物</th>
+				</tr>
+			</tfoot>
+		</table>
 		<img src="./2047933.jpg" width="1400">
-		</a>
 	</body>
 </html>
