--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
 			</thead>
 			<tbody>
 				<tr>
-					<th>li</th>
-					<th>王者荣耀</th>
-					<th>无</th>
+					<td>li</td>
+					<td>王者荣耀</td>
+					<td>无</td>
 				</tr>
 				<tr>
-					<th>wang</th>
-					<th>王者荣耀</th>
-					<th>无</th>
+					<td>wang</td>
+					<td>王者荣耀</td>
+					<td>无</td>
 				</tr>
 				<tr>
-					<th>che</th>
-					<th>王者荣耀</th>
-					<th>无</th>
+					<td>che</td>
+					<td>王者荣耀</td>
+					<td>无</td>
 				</tr>
 				<tr>
-					<th>wang</th>
-					<th>王者荣耀</th>
-					<th>无</th>
+					<td>wang</td>
+					<td>王者荣耀</td>
+					<td>无</td>
 				</tr>
 			</tbody>
 			<tfoot>
 				<tr>
-					<th>总结：废物</th>
+					<td colspan="2">总结：废物</td>
 				</tr>
 			</tfoot>
 		</table>
