--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>我的网页</h1>
-		<a href="http://www.baidu.com"><b>百度</b><br/></a>
+		<a href="http://www.baidu.com" target="_blank"><b>百度</b><br/></a>
 		<table>
 			<caption>成员分布</caption>
 			<thead>
@@ -17,8 +17,8 @@
 					<th>特长</th>
 				</tr>
 			</thead>
-			<tbody>
 				<tr>
+			<tbody>
 					<td>li</td>
 					<td>王者荣耀</td>
 					<td>无</td>
@@ -28,8 +28,8 @@
 					<td>王者荣耀</td>
 					<td>无</td>
 				</tr>
-				<tr>
 					<td>che</td>
+				<tr>
 					<td>王者荣耀</td>
 					<td>无</td>
 				</tr>
@@ -45,6 +45,16 @@
 				</tr>
 			</tfoot>
 		</table>
+		<p>如果你有意见，请发邮件给我们。</p>
+		<form name="myForm" action="mailto:2695370991@qq.com" method="post" target="_blank">
+			
+			姓名：<input type="text" name="name" size="15" maxlength="4" value="例：张三">
+			性别：
+				<input type="radio" name="question1" value="boy"/>男
+				<input type="radio" name="question1" value="girl"/>女
+		</form>
+		按钮：<br/>
+		<input type="button" name="按钮" onclick="alert('你还真点啊！，你个憨批！')" value="点啊！"><br/>
 		<img src="./2047933.jpg" width="1400">
 	</body>
 </html>
