--- a/index.html
+++ b/index.html
@@ -429,13 +429,13 @@ pre[data-line] .line-highlight[data-end]:after {
 
 <ol>
 <li>数据采集</li>
-<li>状态监测</li>
-<li>安全保护</li>
-<li>充电控制</li>
-<li>能量控制管理</li>
-<li>均衡管理</li>
+<li>电池状态计算</li>
+<li>能量管理</li>
+<li>安全管理</li>
 <li>热管理</li>
-<li>信息管理</li>
+<li>均衡控制</li>
+<li>通信功能</li>
+<li>人机接口</li>
 </ol>
 <h3 class="mume-header" id="4-%E7%94%B5%E6%B1%A0%E7%9A%84%E5%BC%80%E8%B7%AF%E7%94%B5%E5%8E%8B-%E9%A2%9D%E5%AE%9A%E7%94%B5%E5%8E%8B-%E5%B7%A5%E4%BD%9C%E7%94%B5%E5%8E%8B-%E5%85%85%E6%94%BE%E7%94%B5%E7%BB%88%E6%AD%A2%E7%94%B5%E5%8E%8B-%E8%83%BD%E9%87%8F%E5%AF%86%E5%BA%A6-socdod-%E6%94%BE%E7%94%B5%E6%97%B6%E7%8E%87-%E6%94%BE%E7%94%B5%E5%80%8D%E7%8E%87%E5%88%86%E5%88%AB%E6%8C%87%E4%BB%80%E4%B9%88">4、电池的开路电压、额定电压、工作电压、充/放电终止电压、能量密度、SOC/DOD、放电时率、放电倍率分别指什么？</h3>
 
