--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0090)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/mume2023523-26480-86wo7s.b6clq.html -->
+<!-- saved from url=(0090)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/mume2023523-26480-1p5tsyl.kdrb.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>复习3_4</title>
       
@@ -402,7 +402,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>(1)反应气体向基片表面扩散;</li>
 <li>(2)反应气体吸附于基片表面;</li>
 <li>(3)在基片表面发生化学反应;</li>
-<li>(4)在基片表面产生的气相副产物脱离表面，向空间扩散或被抽气系统抽走;基片表面留下不发的固相反应产物一薄膜。</li>
+<li>(4)在基片表面产生的气相副产物脱离表面，向空间扩散或被抽气系统抽走;基片表面留下不挥发的固相反应产物一薄膜。</li>
 </ul>
 <ol start="3">
 <li><strong>具备的条件</strong></li>
@@ -485,6 +485,207 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 </li>
 <li><strong>缺点</strong>：薄膜的致密度较差</li>
+</ul>
+<h2 class="mume-header" id="%E7%AC%AC%E5%9B%9B%E7%AB%A0-%E5%8A%9F%E8%83%BD%E9%99%B6%E7%93%B7%E5%88%B6%E5%A4%87">第四章、功能陶瓷制备</h2>
+
+<h3 class="mume-header" id="%E4%B8%80-%E9%87%8D%E8%A6%81%E6%A6%82%E5%BF%B5-1">一、重要概念</h3>
+
+<ul>
+<li>功能陶瓷、高温超导陶瓷、敏感陶瓷、压电陶瓷、热电陶瓷</li>
+</ul>
+<h3 class="mume-header" id="%E4%BA%8C-%E7%9F%A5%E8%AF%86%E7%82%B9-1">二、知识点</h3>
+
+<h4 class="mume-header" id="1%E5%8A%9F%E8%83%BD%E9%99%B6%E7%93%B7%E7%9A%84%E6%A6%82%E5%BF%B5-%E5%88%B6%E5%A4%87%E5%B7%A5%E8%89%BA-%E8%B6%85%E5%BE%AE%E7%BB%86%E7%B2%89%E7%9A%84%E5%B8%B8%E7%94%A8%E5%88%B6%E5%A4%87%E6%96%B9%E6%B3%95-%E6%88%90%E5%9E%8B%E5%88%B6%E5%A4%87%E6%8A%80%E6%9C%AF-%E7%83%A7%E7%BB%93%E6%96%B9%E6%B3%95">1.功能陶瓷的概念、制备工艺、超微细粉的常用制备方法、成型制备技术、烧结方法</h4>
+
+<ul>
+<li><strong>功能陶瓷的概念</strong>
+<ul>
+<li>功能陶瓷是指那些利用电、磁、声、光、热等直接效应及其耦合效应所提供的一种或多种性质来实现某种使用功能的先进陶瓷。</li>
+</ul>
+</li>
+<li><strong>功能陶瓷的特点</strong>:品种多、产量大、价格低应用广、功能全、技术高、<br>
+更新快。</li>
+<li><strong>功能陶瓷的制备工艺</strong>
+<ul>
+<li>➢多晶体的陶瓷一般均是通过高温烧结法而制成的，也称为<br>
+烧结陶瓷。</li>
+<li><img src="./3_4_files/2023-06-23-18-48-51.png" alt="1"></li>
+</ul>
+</li>
+<li><strong>超细微粉的制备</strong>
+<ul>
+<li>◆粉碎法: 机械粉碎，气流粉碎;杂质多，1μum以上;</li>
+<li>◆合成法:固相法、液相法和气相法;纯度、粒度可控均匀性好、颗粒微细。</li>
+</ul>
+</li>
+<li><strong>陶瓷的制备技术</strong>
+<ul>
+<li>➢成型:将预浸料根据产品的要求，铺置成一定的形状，一般就是产品的形状。
+<ul>
+<li>成型是获得高性能材料的关键</li>
+</ul>
+</li>
+</ul>
+</li>
+<li><strong>功能陶瓷的粉体成型方法</strong>
+<ul>
+<li>(1)模压成形;</li>
+<li>(2)等静压成形;</li>
+<li>(3)挤压成形;</li>
+<li>(4)注浆成形;</li>
+<li>(5)热压铸成型;</li>
+</ul>
+</li>
+<li><strong>功能陶瓷的烧结方法</strong>
+<ul>
+<li><strong>烧结</strong>是指高温条件下，坯体表面积减小，孔隙率降低、机械性能提高的致密化过程。</li>
+<li>烧结驱动力:粉体的表面能降低和系统自由能降低。</li>
+<li>陶瓷的烧结方法分类:
+<ul>
+<li>按压力分:常压烧结、压力烧结。</li>
+<li>按反应分:固相、液相、气相、活化、反应烧结。</li>
+<li><img src="./3_4_files/2023-06-23-18-58-25.png" alt="1"></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<h4 class="mume-header" id="2%E9%AB%98%E6%B8%A9%E8%B6%85%E5%AF%BC%E9%99%B6%E7%93%B7%E8%B6%85%E5%AF%BC%E5%8E%9F%E7%90%86-%E5%88%B6%E5%A4%87%E5%B7%A5%E8%89%BA">2.高温超导陶瓷超导原理、制备工艺</h4>
+
+<ul>
+<li><strong>超导陶瓷的制备</strong>
+<ul>
+<li>➢高温熔烧法：高温熔烧法分为二次烧结法和三次烧结法，是制造高温超导陶瓷的主要方法。</li>
+<li>➢熔融生长法</li>
+<li>➢化学共沉淀法</li>
+<li>➢低温化学技术</li>
+<li>➢部分熔化法</li>
+<li>➢激光加热基座晶体生长技术</li>
+</ul>
+</li>
+<li><strong>线状超导陶瓷制备</strong>
+<ul>
+<li>(1)拉拔陶瓷芯金属外套管</li>
+<li>(2)用合金先成型为线材，后经氧化处理转变成陶瓷材料</li>
+<li>(3)熔化拉拔法对线材进行二次处理，均匀化热处理和优先处理，可获密度为98%，77k时临界电流 密度为600A/cm<sup>2</sup>的线材。</li>
+</ul>
+</li>
+<li>其他：热压、热挤、烧结锻造、夹层材料等都可用于异性陶瓷材料的制备。</li>
+</ul>
+<h4 class="mume-header" id="3%E7%83%AD%E6%95%8F%E9%99%B6%E7%93%B7%E7%9A%84%E5%8D%8A%E5%AF%BC%E5%8C%96-%E5%88%B6%E5%A4%87%E5%B7%A5%E8%89%BA%E6%B0%94%E6%95%8F%E9%99%B6%E7%93%B7%E6%B0%94%E6%95%8F%E6%9C%BA%E7%90%86-%E6%80%A7%E8%83%BD%E6%8C%87%E6%A0%87-%E6%B0%94%E6%95%8F%E9%99%B6%E7%93%B7%E6%9D%90%E6%96%99%E5%8F%8A%E5%85%B6%E5%BA%94%E7%94%A8%E5%8E%8B%E7%94%B5%E9%99%B6%E7%93%B7%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E5%88%B6%E5%A4%87%E5%B7%A5%E8%89%BA-%E5%BA%94%E7%94%A8%E7%83%AD%E7%94%B5%E9%99%B6%E7%93%B7%E5%B7%A5%E4%BD%9C%E5%8E%9F%E7%90%86-%E5%BA%94%E7%94%A8">3.热敏陶瓷的半导化、制备工艺;气敏陶瓷气敏机理、性能指标、气敏陶瓷材料及其应用;压电陶瓷工作原理、制备工艺、应用;热电陶瓷工作原理、应用</h4>
+
+<ul>
+<li>
+<p><strong>热敏陶瓷的半导化</strong></p>
+<ul>
+<li>所谓半导化，是指在禁带中形成附加能级:施主能级或受主能级。在室温下，就可以受到热激发产生导电载流子，从而形成半导体。</li>
+</ul>
+</li>
+<li>
+<p><strong>热敏陶瓷的半导体化制造工艺</strong>：</p>
+</li>
+<li>
+<p><strong>气敏陶瓷机理</strong></p>
+<ul>
+<li>➢半导体表面吸附气体分子时，半导体的电导率将随半导体类型和气体分子种类的不同而变化。吸附气体一般分<strong>物理吸附和化学吸附</strong>两大类。传感器材料<strong>功函数</strong>小于被吸附气体分子时为阴离子吸附，否则为阳离子吸附。</li>
+<li>➢氧化性气体吸附于n型半导体或还原性气体吸附于p型半导体气敏材料，都会使载流子数目减少，电导率降低;相反，还原性气体吸附子n型半导体或氧化性气体吸附于p型半导体气敏材科，会使载流子数目增加，电导率增大。</li>
+</ul>
+</li>
+<li>
+<p><strong>气敏陶瓷的性能指标</strong></p>
+<ul>
+<li>气体选择性</li>
+<li>初始稳定性、气敏响应和复原特性
+<ul>
+<li>气敏响应：通过被测气体后元件电阻值恢复至稳定所需要的时间</li>
+</ul>
+</li>
+<li>灵敏度及长期稳定性
+<ul>
+<li>灵敏度：反应元件对北被测气体敏感程度的特性
+<ul>
+<li>一是性能随时间的变化;</li>
+<li>二是气敏元件的性能对环境条件(温度、湿度)的忍耐能力。</li>
+</ul>
+</li>
+<li>➢<strong>改善</strong>稳定性的方法
+<ul>
+<li>加入添加剂</li>
+<li>条件烧结温度</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>气敏陶瓷材料及应用</strong></p>
+<ul>
+<li>气敏陶瓷材料
+<ul>
+<li><strong>Zn0系气敏陶瓷</strong>最突出的优点是气体选择性强，它与SnO<sub>2</sub>元件- 样,利用贵金属催化剂提高其灵敏度,但工作温度较高。</li>
+<li><strong>Fe<sub>2</sub>O<sub>3</sub>系气敏陶瓷</strong>，不需要添加贵金属催化剂就可制成灵敏度高、稳定性好、具有一-定选择性，且在高温下稳定性好的元件。</li>
+</ul>
+</li>
+<li><strong>应用</strong>
+<ul>
+<li>燃气报警</li>
+<li>氧浓度传感器</li>
+<li>酒精传感器</li>
+<li>有毒气体传感器</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>压电陶瓷工作原理</strong></p>
+<ul>
+<li><strong>压电效应的本质</strong>:机械作用(应力与应变)引起晶体介质的极化,从而导致两端表面内出现符号相反的束缚电荷——<strong>不具有对称中心的晶体才具有压电性。</strong></li>
+</ul>
+</li>
+<li>
+<p><strong>压电陶瓷制备工艺</strong></p>
+<ul>
+<li><img src="./3_4_files/2023-06-23-20-04-41.png" alt="1"></li>
+<li>常见的压电陶瓷属于钙钛矿型晶体结构</li>
+</ul>
+</li>
+<li>
+<p><strong>压电陶瓷的应用</strong></p>
+<ul>
+<li>压电陶瓷具有突出<strong>优点</strong>:
+<ul>
+<li>➢制造方便，设备简单，成本低廉，不受尺寸大小限制，可以在任意方向极化;</li>
+<li>➢通过调节组分可以在很宽范围改变材料的性能，以适应各种需要</li>
+<li>➢不溶于水，耐热耐湿;</li>
+<li>➢可以很方便地制成各种复杂的形状等</li>
+</ul>
+</li>
+<li>近年来压电陶瓷的应用不断发展，在航天、通讯、超声技术精密测量、红外技术等领域均得到广泛应用，是当代高技术中的一种重要的功能材料。
+<ul>
+<li>水声、超声换能器</li>
+<li>高电压发生装置</li>
+<li>电声设备</li>
+<li>滤波器</li>
+<li>压电传感器</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>热电陶瓷工作原理</strong></p>
+<ul>
+<li>用不同导体构成回路，两接头保持温差，则闭合回路中有电流流过。该现象叫温差电效应或热电效应。回路中的电动势叫<strong>温差电动势</strong></li>
+</ul>
+</li>
+<li>
+<p><strong>热电陶瓷的应用</strong></p>
+<ul>
+<li>用于测温</li>
+<li>用做温差电源</li>
+<li>用于制冷</li>
+</ul>
+</li>
 </ul>
 
       </div>
