--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ pre[data-line] .line-highlight[data-end]:after {
       <div class="mume markdown-preview  ">
       <h1 class="mume-header" id="%E5%8D%95%E8%AF%8D">&#x5355;&#x8BCD;</h1>
 
-<h2 class="mume-header" id="7222006">7.22&#xFF08;2006&#xFF09;</h2>
+<h2 class="mume-header" id="722-2006">7.22 (2006)</h2>
 
 <ul>
 <li>in spite of
@@ -365,7 +365,105 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>a.&#x8D85;&#x7136;&#x7684;&#xFF1B;&#x51B7;&#x6F20;&#x7684;</li>
 </ul>
 </li>
-<li></li>
+</ul>
+<h2 class="mume-header" id="723-2006">7.23 (2006)</h2>
+
+<ul>
+<li>&amp;game
+<ul>
+<li>n.&#x730E;&#x7269;</li>
+</ul>
+</li>
+<li>fishery
+<ul>
+<li>n.&#x6E14;&#x573A;</li>
+</ul>
+</li>
+<li>halve
+<ul>
+<li>v.&#x51CF;&#x4E3A;&#x4E00;&#x534A;</li>
+</ul>
+</li>
+<li>&amp;effort
+<ul>
+<li>n.&#x6709;&#x7EC4;&#x7EC7;&#x7684;&#x884C;&#x52A8;</li>
+</ul>
+</li>
+<li>massive
+<ul>
+<li>a.&#x5DE8;&#x5927;&#x7684;&#xFF1B;&#x975E;&#x5E38;&#x4E25;&#x91CD;&#x7684;</li>
+</ul>
+</li>
+<li>&amp;well
+<ul>
+<li>ad.&#x5927;&#x5927;&#x7684;&#xFF1B;&#x8FDC;&#x8FDC;&#x7684;</li>
+</ul>
+</li>
+<li>&amp;hold
+<ul>
+<li>v.&#x8BA4;&#x4E3A;&#xFF1B;&#x76F8;&#x4FE1;</li>
+</ul>
+</li>
+</ul>
+<hr>
+<ul>
+<li>suited
+<ul>
+<li>a.&#x9002;&#x5408;&#x7684;&#xFF1B;&#x5408;&#x9002;&#x7684;</li>
+</ul>
+</li>
+<li>phony
+<ul>
+<li>a.&#x865A;&#x5047;&#x7684;&#xFF1B;&#x6B3A;&#x9A97;&#x4EBA;&#x7684;</li>
+</ul>
+</li>
+<li>&amp;damn
+<ul>
+<li>a.&#x592A;&#x591A;&#x7684;&#xFF1B;&#x5341;&#x8DB3;&#x7684;</li>
+</ul>
+</li>
+<li>&amp;track
+<ul>
+<li>v.&#x8FFD;&#x968F;......&#x7684;&#x8FDB;&#x7A0B;</li>
+</ul>
+</li>
+<li>celebrity
+<ul>
+<li>n.&#x540D;&#x4EBA;&#xFF1B;&#x540D;&#x58F0;</li>
+</ul>
+</li>
+<li>&amp;agenda
+<ul>
+<li>n.&#x9690;&#x79D8;&#x7684;&#x52A8;&#x673A;</li>
+</ul>
+</li>
+<li>attack
+<ul>
+<li>v.&#x653B;&#x51FB;&#xFF1B;&#xFF08;&#x75BE;&#x75C5;&#x7B49;&#xFF09;&#x53D1;&#x4F5C;</li>
+<li>n.&#x8FDB;&#x653B;&#xFF1B;&#x4F24;&#x5BB3;</li>
+</ul>
+</li>
+<li>potential
+<ul>
+<li>a.&#x6F5C;&#x5728;&#x7684;</li>
+<li>n.&#x6F5C;&#x529B;&#xFF1B;&#x53EF;&#x80FD;&#x6027;</li>
+</ul>
+</li>
+<li>live with
+<ul>
+<li>&#x5FCD;&#x53D7;&#xFF1B;&#x5BB9;&#x5FCD;</li>
+</ul>
+</li>
+<li>&amp;message
+<ul>
+<li>n.&#x542F;&#x793A;&#xFF1B;&#x5BD3;&#x610F;</li>
+</ul>
+</li>
+<li>memento mori
+<ul>
+<li>n.(&#x62C9;&#x4E01;&#x8BED;)&#x4EBA;&#x7EC8;&#x6709;&#x4E00;&#x6B7B;</li>
+</ul>
+</li>
 </ul>
 
       </div>
