--- a/index.html
+++ b/index.html
@@ -465,6 +465,71 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 </li>
 </ul>
+<h2 class="mume-header" id="724-2007">7.24 (2007)</h2>
+
+<ul>
+<li>certificate
+<ul>
+<li>n.&#x8BC1;&#x660E;&#xFF1B;&#x8BC1;&#x660E;&#x4E66;</li>
+</ul>
+</li>
+<li>tournament
+<ul>
+<li>n.&#x9526;&#x6807;&#x8D5B;</li>
+</ul>
+</li>
+<li>&amp;rank
+<ul>
+<li>n.&#x56E2;&#x4F53;&#x6216;&#x7EC4;&#x7EC7;&#x7684;&#x6210;&#x5458;</li>
+</ul>
+</li>
+<li>stamina
+<ul>
+<li>n.&#x8010;&#x529B;&#xFF1B;&#x8010;&#x6027;</li>
+</ul>
+</li>
+<li>&amp;couple
+<ul>
+<li>v.&#x8FDE;&#x63A5;&#xFF1B;&#x7ED3;&#x5408;</li>
+</ul>
+</li>
+<li>cognitive
+<ul>
+<li>a.&#x8BA4;&#x77E5;&#x7684;</li>
+</ul>
+</li>
+<li>pursuit
+<ul>
+<li>n.&#x7231;&#x597D;&#xFF1B;&#x7279;&#x5B9A;&#x7684;&#x6D3B;&#x52A8;</li>
+</ul>
+</li>
+<li>craze
+<ul>
+<li>n.&#x72C2;&#x70ED;&#xFF1B;&#x72C2;&#x6F6E;</li>
+</ul>
+</li>
+<li>nurture
+<ul>
+<li>n.&#x517B;&#x80B2;&#xFF1B;&#x57F9;&#x517B;</li>
+</ul>
+</li>
+<li>field
+<ul>
+<li>v.&#x5904;&#x7406;&#xFF1B;&#x5E94;&#x4ED8;</li>
+</ul>
+</li>
+<li>fondness
+<ul>
+<li>n.&#x559C;&#x7231;&#xFF1B;&#x559C;&#x6B22;</li>
+</ul>
+</li>
+<li>elude
+<ul>
+<li>v.&#x96BE;&#x5012;&#xFF1B;&#x4F7F;&#x4E0D;&#x7406;&#x89E3;</li>
+</ul>
+</li>
+</ul>
+<hr>
 
       </div>
       
