--- a/index.html
+++ b/index.html
@@ -513,6 +513,9 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>n.&#x517B;&#x80B2;&#xFF1B;&#x57F9;&#x517B;</li>
 </ul>
 </li>
+</ul>
+<hr>
+<ul>
 <li>field
 <ul>
 <li>v.&#x5904;&#x7406;&#xFF1B;&#x5E94;&#x4ED8;</li>
@@ -528,8 +531,57 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>v.&#x96BE;&#x5012;&#xFF1B;&#x4F7F;&#x4E0D;&#x7406;&#x89E3;</li>
 </ul>
 </li>
+<li>sequence
+<ul>
+<li>n.&#x987A;&#x5E8F;&#xFF1B;&#x5E8F;&#x5217;</li>
 </ul>
-<hr>
+</li>
+<li>&amp;divide
+<ul>
+<li>v.&#x9664;&#x4EE5;&#xFF1B;&#x9664;</li>
+</ul>
+</li>
+<li>chronological
+<ul>
+<li>a.&#x6309;&#x65F6;&#x95F4;&#x8BA1;&#x7B97;&#x7684;</li>
+</ul>
+</li>
+<li>chronological age
+<ul>
+<li>&#x751F;&#x7406;&#x5E74;&#x9F84;</li>
+</ul>
+</li>
+<li>article
+<ul>
+<li>n.&#x6587;&#x7AE0;&#xFF1B;&#x6761;&#x6B3E;&#xFF1B;&#x7269;&#x54C1;</li>
+</ul>
+</li>
+<li>component
+<ul>
+<li>n.&#x7EC4;&#x6210;&#x90E8;&#x5206;</li>
+</ul>
+</li>
+<li>critical
+<ul>
+<li>a.&#x6279;&#x5224;&#x7684;&#xFF1B;&#x5173;&#x952E;&#x7684;&#xFF1B;&#x5371;&#x6025;&#x7684;</li>
+</ul>
+</li>
+<li>negatively
+<ul>
+<li>ad.&#x4E0D;&#x5229;&#x7684;&#xFF1B;&#x6D88;&#x6781;&#x7684;&#xFF1B;&#x8868;&#x793A;&#x5426;&#x5B9A;&#x7684;</li>
+</ul>
+</li>
+<li>&amp;matter
+<ul>
+<li>vt.&#x8981;&#x7D27;</li>
+</ul>
+</li>
+<li>format
+<ul>
+<li>n.&#x5F62;&#x5F0F;&#xFF1B;&#x683C;&#x5F0F;</li>
+</ul>
+</li>
+</ul>
 
       </div>
       
