--- a/index.html
+++ b/index.html
@@ -582,6 +582,106 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 </li>
 </ul>
+<h2 class="mume-header" id="725-2007">7.25 (2007)</h2>
+
+<ul>
+<li>spouse
+<ul>
+<li>n.&#x914D;&#x5076;</li>
+</ul>
+</li>
+<li>got laid off
+<ul>
+<li>&#x88AB;&#x89E3;&#x96C7;</li>
+</ul>
+</li>
+<li>sick
+<ul>
+<li>a.&#x751F;&#x75C5;&#x7684;&#xFF1B;&#x5BF9;......&#x538C;&#x5026;&#x7684;</li>
+</ul>
+</li>
+<li>insurance
+<ul>
+<li>n.&#x4FDD;&#x9669;&#x8D39;&#xFF1B;&#x9884;&#x9632;&#x63AA;&#x65BD;</li>
+</ul>
+</li>
+<li>guaranteed
+<ul>
+<li>a.&#x6709;&#x4FDD;&#x969C;&#x7684;</li>
+</ul>
+</li>
+<li>picture
+<ul>
+<li>n.&#x7167;&#x7247;&#xFF1B;&#x63CF;&#x7ED8;&#xFF1B;&#x72B6;&#x51B5;</li>
+<li>v.&#x60F3;&#x8C61;&#xFF1B;&#x63CF;&#x8FF0;</li>
+<li>&amp;n.&#x60C5;&#x5F62;&#xFF1B;&#x5C40;&#x9762;</li>
+</ul>
+</li>
+<li>absolute
+<ul>
+<li>a.&#x5B8C;&#x5168;&#x7684;&#xFF1B;&#x7EDD;&#x5BF9;&#x7684;</li>
+</ul>
+</li>
+<li>frightening
+<ul>
+<li>n.&#x52A0;&#x901F;&#xFF1B;&#x589E;&#x901F;</li>
+</ul>
+</li>
+<li>deprive
+<ul>
+<li>v.&#x5265;&#x593A;&#xFF1B;&#x4F7F;&#x4E27;&#x5931;</li>
+</ul>
+</li>
+</ul>
+<hr>
+<ul>
+<li>&amp;sort
+<ul>
+<li>v.&#x89E3;&#x51B3;&#xFF1B;&#x5B89;&#x6392;</li>
+</ul>
+</li>
+<li>heads rolling
+<ul>
+<li>&#x53D7;&#x7F5A;</li>
+</ul>
+</li>
+<li>staff
+<ul>
+<li>n.&#x5168;&#x4F53;&#x804C;&#x5458;</li>
+<li>v.&#x4EFB;&#x804C;&#x4E8E;</li>
+</ul>
+</li>
+<li>feeble
+<ul>
+<li>a.&#x65E0;&#x6548;&#x7684;&#xFF1B;&#x65E0;&#x529B;&#x7684;</li>
+</ul>
+</li>
+<li>executive
+<ul>
+<li>a.&#x884C;&#x653F;&#x7684;&#xFF1B;&#x7BA1;&#x7406;&#x7684;</li>
+</ul>
+</li>
+<li>intricate
+<ul>
+<li>a.&#x9519;&#x7EFC;&#x590D;&#x6742;&#x7684;</li>
+</ul>
+</li>
+<li>&amp;dim
+<ul>
+<li>a.&#x611A;&#x7B28;&#x7684;</li>
+</ul>
+</li>
+<li>hugely
+<ul>
+<li>ad.&#x6781;&#x5EA6;&#xFF1B;&#x6781;&#x5176;</li>
+</ul>
+</li>
+<li>fierce
+<ul>
+<li>a.&#x51F6;&#x6B8B;&#x7684;&#xFF1B;&#x6FC0;&#x70C8;&#x7684;</li>
+</ul>
+</li>
+</ul>
 
       </div>
       
