--- a/index.html
+++ b/index.html
@@ -266,57 +266,57 @@ pre[data-line] .line-highlight[data-end]:after {
 <h2 class="mume-header" id="722-2006">7.22 (2006)</h2>
 
 <ul>
-<li>in spite of
+<li><strong>in spite of</strong>
 <ul>
 <li>&#x4E0D;&#x7BA1;&#xFF1B;&#x5C3D;&#x7BA1;</li>
 </ul>
 </li>
-<li>homogenize
+<li><strong>homogenize</strong>
 <ul>
 <li>v.&#x4F7F;&#x5927;&#x4F17;&#x5316;</li>
 </ul>
 </li>
-<li>deference
+<li><strong>deference</strong>
 <ul>
 <li>n.&#x606D;&#x656C;&#xFF1B;&#x5C0A;&#x656C;</li>
 </ul>
 </li>
-<li>launch
+<li><strong>launch</strong>
 <ul>
 <li>v.&#x53D1;&#x8D77;&#xFF1B;&#x53D1;&#x52A8;</li>
 </ul>
 </li>
-<li>&amp;force
+<li><strong>&amp;force</strong>
 <ul>
 <li>n.&#x6709;&#x5F71;&#x54CD;&#x529B;&#x7684;&#x4EBA;&#x6216;&#x4E8B;&#x7269;</li>
 </ul>
 </li>
-<li>elevating
+<li><strong>elevating</strong>
 <ul>
 <li>a.&#x63D0;&#x5347;&#x601D;&#x60F3;&#x9053;&#x5FB7;&#x6C34;&#x5E73;</li>
 </ul>
 </li>
-<li>census
+<li>**census **
 <ul>
 <li>n.&#x4EBA;&#x53E3;&#x666E;&#x67E5;</li>
 </ul>
 </li>
-<li>bilingual
+<li><strong>bilingual</strong>
 <ul>
 <li>a.&#x4F1A;&#x8BF4;&#x4E24;&#x79CD;&#x8BED;&#x8A00;&#x7684;</li>
 </ul>
 </li>
-<li>divisive
+<li><strong>divisive</strong>
 <ul>
 <li>a.&#x5BFC;&#x81F4;&#x5206;&#x88C2;&#x7684;</li>
 </ul>
 </li>
-<li>&amp;pocket
+<li><strong>&amp;pocket</strong>
 <ul>
 <li>n.&#x5B64;&#x7ACB;&#x7684;&#x4EBA;&#x7FA4;&#xFF1B;&#x5C0F;&#x7EC4;&#x7EC7;</li>
 </ul>
 </li>
-<li>seethe
+<li><strong>seethe</strong>
 <ul>
 <li>v.&#x7FFB;&#x6EDA;&#xFF1B;&#x6D8C;&#x52A8;</li>
 </ul>
@@ -324,43 +324,43 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 <hr>
 <ul>
-<li>cottage
+<li><strong>cottage</strong>
 <ul>
 <li>n.&#x5C0F;&#x5C4B;&#xFF1B;&#x6751;&#x820D;</li>
 </ul>
 </li>
-<li>playgoer
+<li><strong>playgoer</strong>
 <ul>
 <li>n.&#x620F;&#x8FF7;</li>
 </ul>
 </li>
-<li>&amp;wing
+<li><strong>&amp;wing</strong>
 <ul>
 <li>&#x4FA7;&#x5385;&#xFF1B;&#x8033;&#x623F;</li>
 </ul>
 </li>
-<li>rocket
+<li><strong>rocket</strong>
 <ul>
 <li>n.&#x706B;&#x7BAD;&#xFF1B;&#x7130;&#x706B;</li>
 <li>vi.&#x5FEB;&#x901F;&#x589E;&#x957F;&#xFF1B;&#x8FC5;&#x901F;&#x79FB;&#x52A8;</li>
 </ul>
 </li>
-<li>pointed
+<li><strong>pointed</strong>
 <ul>
 <li>a.&#x5C16;&#x7684;</li>
 </ul>
 </li>
-<li>standing-room ticket
+<li><strong>standing-room ticket</strong>
 <ul>
 <li>&#x7AD9;&#x7968;</li>
 </ul>
 </li>
-<li>&amp;cover
+<li><strong>&amp;cover</strong>
 <ul>
 <li>v.&#x8DB3;&#x4EE5;&#x652F;&#x4ED8;&#xFF1B;&#x591F;&#x4ED8;</li>
 </ul>
 </li>
-<li>detached
+<li><strong>detached</strong>
 <ul>
 <li>a.&#x8D85;&#x7136;&#x7684;&#xFF1B;&#x51B7;&#x6F20;&#x7684;</li>
 </ul>
@@ -369,37 +369,37 @@ pre[data-line] .line-highlight[data-end]:after {
 <h2 class="mume-header" id="723-2006">7.23 (2006)</h2>
 
 <ul>
-<li>&amp;game
+<li><strong>&amp;game</strong>
 <ul>
 <li>n.&#x730E;&#x7269;</li>
 </ul>
 </li>
-<li>fishery
+<li><strong>fishery</strong>
 <ul>
 <li>n.&#x6E14;&#x573A;</li>
 </ul>
 </li>
-<li>halve
+<li><strong>halve</strong>
 <ul>
 <li>v.&#x51CF;&#x4E3A;&#x4E00;&#x534A;</li>
 </ul>
 </li>
-<li>&amp;effort
+<li><strong>&amp;effort</strong>
 <ul>
 <li>n.&#x6709;&#x7EC4;&#x7EC7;&#x7684;&#x884C;&#x52A8;</li>
 </ul>
 </li>
-<li>massive
+<li><strong>massive</strong>
 <ul>
 <li>a.&#x5DE8;&#x5927;&#x7684;&#xFF1B;&#x975E;&#x5E38;&#x4E25;&#x91CD;&#x7684;</li>
 </ul>
 </li>
-<li>&amp;well
+<li><strong>&amp;well</strong>
 <ul>
 <li>ad.&#x5927;&#x5927;&#x7684;&#xFF1B;&#x8FDC;&#x8FDC;&#x7684;</li>
 </ul>
 </li>
-<li>&amp;hold
+<li><strong>&amp;hold</strong>
 <ul>
 <li>v.&#x8BA4;&#x4E3A;&#xFF1B;&#x76F8;&#x4FE1;</li>
 </ul>
@@ -407,59 +407,59 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 <hr>
 <ul>
-<li>suited
+<li><strong>suited</strong>
 <ul>
 <li>a.&#x9002;&#x5408;&#x7684;&#xFF1B;&#x5408;&#x9002;&#x7684;</li>
 </ul>
 </li>
-<li>phony
+<li><strong>phony</strong>
 <ul>
 <li>a.&#x865A;&#x5047;&#x7684;&#xFF1B;&#x6B3A;&#x9A97;&#x4EBA;&#x7684;</li>
 </ul>
 </li>
-<li>&amp;damn
+<li><strong>&amp;damn</strong>
 <ul>
 <li>a.&#x592A;&#x591A;&#x7684;&#xFF1B;&#x5341;&#x8DB3;&#x7684;</li>
 </ul>
 </li>
-<li>&amp;track
+<li><strong>&amp;track</strong>
 <ul>
 <li>v.&#x8FFD;&#x968F;......&#x7684;&#x8FDB;&#x7A0B;</li>
 </ul>
 </li>
-<li>celebrity
+<li><strong>celebrity</strong>
 <ul>
 <li>n.&#x540D;&#x4EBA;&#xFF1B;&#x540D;&#x58F0;</li>
 </ul>
 </li>
-<li>&amp;agenda
+<li><strong>&amp;agenda</strong>
 <ul>
 <li>n.&#x9690;&#x79D8;&#x7684;&#x52A8;&#x673A;</li>
 </ul>
 </li>
-<li>attack
+<li><strong>attack</strong>
 <ul>
 <li>v.&#x653B;&#x51FB;&#xFF1B;&#xFF08;&#x75BE;&#x75C5;&#x7B49;&#xFF09;&#x53D1;&#x4F5C;</li>
 <li>n.&#x8FDB;&#x653B;&#xFF1B;&#x4F24;&#x5BB3;</li>
 </ul>
 </li>
-<li>potential
+<li><strong>potential</strong>
 <ul>
 <li>a.&#x6F5C;&#x5728;&#x7684;</li>
 <li>n.&#x6F5C;&#x529B;&#xFF1B;&#x53EF;&#x80FD;&#x6027;</li>
 </ul>
 </li>
-<li>live with
+<li><strong>live with</strong>
 <ul>
 <li>&#x5FCD;&#x53D7;&#xFF1B;&#x5BB9;&#x5FCD;</li>
 </ul>
 </li>
-<li>&amp;message
+<li><strong>&amp;message</strong>
 <ul>
 <li>n.&#x542F;&#x793A;&#xFF1B;&#x5BD3;&#x610F;</li>
 </ul>
 </li>
-<li>memento mori
+<li><strong>memento mori</strong>
 <ul>
 <li>n.(&#x62C9;&#x4E01;&#x8BED;)&#x4EBA;&#x7EC8;&#x6709;&#x4E00;&#x6B7B;</li>
 </ul>
@@ -468,47 +468,47 @@ pre[data-line] .line-highlight[data-end]:after {
 <h2 class="mume-header" id="724-2007">7.24 (2007)</h2>
 
 <ul>
-<li>certificate
+<li><strong>certificate</strong>
 <ul>
 <li>n.&#x8BC1;&#x660E;&#xFF1B;&#x8BC1;&#x660E;&#x4E66;</li>
 </ul>
 </li>
-<li>tournament
+<li><strong>tournament</strong>
 <ul>
 <li>n.&#x9526;&#x6807;&#x8D5B;</li>
 </ul>
 </li>
-<li>&amp;rank
+<li><strong>&amp;rank</strong>
 <ul>
 <li>n.&#x56E2;&#x4F53;&#x6216;&#x7EC4;&#x7EC7;&#x7684;&#x6210;&#x5458;</li>
 </ul>
 </li>
-<li>stamina
+<li><strong>stamina</strong>
 <ul>
 <li>n.&#x8010;&#x529B;&#xFF1B;&#x8010;&#x6027;</li>
 </ul>
 </li>
-<li>&amp;couple
+<li><strong>&amp;couple</strong>
 <ul>
 <li>v.&#x8FDE;&#x63A5;&#xFF1B;&#x7ED3;&#x5408;</li>
 </ul>
 </li>
-<li>cognitive
+<li><strong>cognitive</strong>
 <ul>
 <li>a.&#x8BA4;&#x77E5;&#x7684;</li>
 </ul>
 </li>
-<li>pursuit
+<li><strong>pursuit</strong>
 <ul>
 <li>n.&#x7231;&#x597D;&#xFF1B;&#x7279;&#x5B9A;&#x7684;&#x6D3B;&#x52A8;</li>
 </ul>
 </li>
-<li>craze
+<li><strong>craze</strong>
 <ul>
 <li>n.&#x72C2;&#x70ED;&#xFF1B;&#x72C2;&#x6F6E;</li>
 </ul>
 </li>
-<li>nurture
+<li><strong>nurture</strong>
 <ul>
 <li>n.&#x517B;&#x80B2;&#xFF1B;&#x57F9;&#x517B;</li>
 </ul>
@@ -516,67 +516,67 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 <hr>
 <ul>
-<li>field
+<li><strong>field</strong>
 <ul>
 <li>v.&#x5904;&#x7406;&#xFF1B;&#x5E94;&#x4ED8;</li>
 </ul>
 </li>
-<li>fondness
+<li><strong>fondness</strong>
 <ul>
 <li>n.&#x559C;&#x7231;&#xFF1B;&#x559C;&#x6B22;</li>
 </ul>
 </li>
-<li>elude
+<li><strong>elude</strong>
 <ul>
 <li>v.&#x96BE;&#x5012;&#xFF1B;&#x4F7F;&#x4E0D;&#x7406;&#x89E3;</li>
 </ul>
 </li>
-<li>sequence
+<li><strong>sequence</strong>
 <ul>
 <li>n.&#x987A;&#x5E8F;&#xFF1B;&#x5E8F;&#x5217;</li>
 </ul>
 </li>
-<li>&amp;divide
+<li><strong>&amp;divide</strong>
 <ul>
 <li>v.&#x9664;&#x4EE5;&#xFF1B;&#x9664;</li>
 </ul>
 </li>
-<li>chronological
+<li><strong>chronological</strong>
 <ul>
 <li>a.&#x6309;&#x65F6;&#x95F4;&#x8BA1;&#x7B97;&#x7684;</li>
 </ul>
 </li>
-<li>chronological age
+<li><strong>chronological age</strong>
 <ul>
 <li>&#x751F;&#x7406;&#x5E74;&#x9F84;</li>
 </ul>
 </li>
-<li>article
+<li><strong>article</strong>
 <ul>
 <li>n.&#x6587;&#x7AE0;&#xFF1B;&#x6761;&#x6B3E;&#xFF1B;&#x7269;&#x54C1;</li>
 </ul>
 </li>
-<li>component
+<li><strong>component</strong>
 <ul>
 <li>n.&#x7EC4;&#x6210;&#x90E8;&#x5206;</li>
 </ul>
 </li>
-<li>critical
+<li><strong>critical</strong>
 <ul>
 <li>a.&#x6279;&#x5224;&#x7684;&#xFF1B;&#x5173;&#x952E;&#x7684;&#xFF1B;&#x5371;&#x6025;&#x7684;</li>
 </ul>
 </li>
-<li>negatively
+<li><strong>negatively</strong>
 <ul>
 <li>ad.&#x4E0D;&#x5229;&#x7684;&#xFF1B;&#x6D88;&#x6781;&#x7684;&#xFF1B;&#x8868;&#x793A;&#x5426;&#x5B9A;&#x7684;</li>
 </ul>
 </li>
-<li>&amp;matter
+<li><strong>&amp;matter</strong>
 <ul>
 <li>vt.&#x8981;&#x7D27;</li>
 </ul>
 </li>
-<li>format
+<li><strong>format</strong>
 <ul>
 <li>n.&#x5F62;&#x5F0F;&#xFF1B;&#x683C;&#x5F0F;</li>
 </ul>
@@ -585,49 +585,49 @@ pre[data-line] .line-highlight[data-end]:after {
 <h2 class="mume-header" id="725-2007">7.25 (2007)</h2>
 
 <ul>
-<li>spouse
+<li><strong>spouse</strong>
 <ul>
 <li>n.&#x914D;&#x5076;</li>
 </ul>
 </li>
-<li>got laid off
+<li><strong>got laid off</strong>
 <ul>
 <li>&#x88AB;&#x89E3;&#x96C7;</li>
 </ul>
 </li>
-<li>sick
+<li><strong>sick</strong>
 <ul>
 <li>a.&#x751F;&#x75C5;&#x7684;&#xFF1B;&#x5BF9;......&#x538C;&#x5026;&#x7684;</li>
 </ul>
 </li>
-<li>insurance
+<li><strong>insurance</strong>
 <ul>
 <li>n.&#x4FDD;&#x9669;&#x8D39;&#xFF1B;&#x9884;&#x9632;&#x63AA;&#x65BD;</li>
 </ul>
 </li>
-<li>guaranteed
+<li><strong>guaranteed</strong>
 <ul>
 <li>a.&#x6709;&#x4FDD;&#x969C;&#x7684;</li>
 </ul>
 </li>
-<li>picture
+<li><strong>picture</strong>
 <ul>
 <li>n.&#x7167;&#x7247;&#xFF1B;&#x63CF;&#x7ED8;&#xFF1B;&#x72B6;&#x51B5;</li>
 <li>v.&#x60F3;&#x8C61;&#xFF1B;&#x63CF;&#x8FF0;</li>
 <li>&amp;n.&#x60C5;&#x5F62;&#xFF1B;&#x5C40;&#x9762;</li>
 </ul>
 </li>
-<li>absolute
+<li><strong>absolute</strong>
 <ul>
 <li>a.&#x5B8C;&#x5168;&#x7684;&#xFF1B;&#x7EDD;&#x5BF9;&#x7684;</li>
 </ul>
 </li>
-<li>frightening
+<li><strong>frightening</strong>
 <ul>
 <li>n.&#x52A0;&#x901F;&#xFF1B;&#x589E;&#x901F;</li>
 </ul>
 </li>
-<li>deprive
+<li><strong>deprive</strong>
 <ul>
 <li>v.&#x5265;&#x593A;&#xFF1B;&#x4F7F;&#x4E27;&#x5931;</li>
 </ul>
@@ -635,50 +635,149 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 <hr>
 <ul>
-<li>&amp;sort
+<li><strong>&amp;sort</strong>
 <ul>
 <li>v.&#x89E3;&#x51B3;&#xFF1B;&#x5B89;&#x6392;</li>
 </ul>
 </li>
-<li>heads rolling
+<li><strong>heads rolling</strong>
 <ul>
 <li>&#x53D7;&#x7F5A;</li>
 </ul>
 </li>
-<li>staff
+<li><strong>staff</strong>
 <ul>
 <li>n.&#x5168;&#x4F53;&#x804C;&#x5458;</li>
 <li>v.&#x4EFB;&#x804C;&#x4E8E;</li>
 </ul>
 </li>
-<li>feeble
+<li><strong>feeble</strong>
 <ul>
 <li>a.&#x65E0;&#x6548;&#x7684;&#xFF1B;&#x65E0;&#x529B;&#x7684;</li>
 </ul>
 </li>
-<li>executive
+<li><strong>executive</strong>
 <ul>
 <li>a.&#x884C;&#x653F;&#x7684;&#xFF1B;&#x7BA1;&#x7406;&#x7684;</li>
 </ul>
 </li>
-<li>intricate
+<li><strong>intricate</strong>
 <ul>
 <li>a.&#x9519;&#x7EFC;&#x590D;&#x6742;&#x7684;</li>
 </ul>
 </li>
-<li>&amp;dim
+<li><strong>&amp;dim</strong>
 <ul>
 <li>a.&#x611A;&#x7B28;&#x7684;</li>
 </ul>
 </li>
-<li>hugely
+<li><strong>hugely</strong>
 <ul>
 <li>ad.&#x6781;&#x5EA6;&#xFF1B;&#x6781;&#x5176;</li>
 </ul>
 </li>
-<li>fierce
+<li><strong>fierce</strong>
 <ul>
 <li>a.&#x51F6;&#x6B8B;&#x7684;&#xFF1B;&#x6FC0;&#x70C8;&#x7684;</li>
+</ul>
+</li>
+</ul>
+<h2 class="mume-header" id="726-2008">7.26 (2008)</h2>
+
+<ul>
+<li><strong>particularly</strong>
+<ul>
+<li>a.&#x7279;&#x5B9A;&#x7684;&#xFF1B;&#x683C;&#x5916;&#x7684;&#xFF1B;&#x6311;&#x5254;&#x7684;</li>
+<li>n.&#x7EC6;&#x8282;</li>
+</ul>
+</li>
+<li><strong>catch up to</strong>
+<ul>
+<li>&#x8FFD;&#x4E0A;&#xFF1B;&#x8D76;&#x4E0A;</li>
+</ul>
+</li>
+<li><strong>udesirable</strong>
+<ul>
+<li>a.&#x4E0D;&#x5229;&#x7684;</li>
+</ul>
+</li>
+<li><strong>worn</strong>
+<ul>
+<li>a.&#x7528;&#x65E7;&#x7684;&#xFF1B;&#x7B4B;&#x75B2;&#x529B;&#x5C3D;&#x7684;</li>
+</ul>
+</li>
+<li><strong>domestic</strong>
+<ul>
+<li>a.&#x5BB6;&#x5EAD;&#x7684;&#xFF1B;&#x5BB6;&#x52A1;&#x7684;</li>
+</ul>
+</li>
+<li><strong>strain</strong>
+<ul>
+<li>n.&#x7126;&#x8651;&#xFF1B;&#x8FC7;&#x5EA6;&#x52B3;&#x7D2F;</li>
+</ul>
+</li>
+<li><strong>durable</strong>
+<ul>
+<li>a.&#x6301;&#x4E45;&#x7684;&#xFF1B;&#x957F;&#x671F;&#x7684;</li>
+</ul>
+</li>
+<li><strong>barely</strong>
+<ul>
+<li>ad.&#x51E0;&#x4E4E;&#x4E0D;&#xFF1B;&#x7B80;&#x76F4;&#x6CA1;&#x6709;</li>
+</ul>
+</li>
+</ul>
+<hr>
+<ul>
+<li><strong>affiliation</strong>
+<ul>
+<li>n.&#x96B6;&#x5C5E;&#xFF1B;&#x4ECE;&#x5C5E;</li>
+</ul>
+</li>
+<li><strong>rest</strong>
+<ul>
+<li>n.&#x5269;&#x4F59;&#x90E8;&#x5206;&#xFF1B;&#x4F11;&#x606F;&#x65F6;&#x95F4;</li>
+<li>vi.&#x4E2D;&#x6B62;&#xFF1B;&#x957F;&#x7720;</li>
+</ul>
+</li>
+<li><strong>agency</strong>
+<ul>
+<li>n.&#x4EE3;&#x7406;&#x673A;&#x6784;</li>
+</ul>
+</li>
+<li><strong>access</strong>
+<ul>
+<li>n.&#x83B7;&#x53D6;&#x673A;&#x4F1A;&#xFF1B;&#x4F7F;&#x7528;&#x6743;</li>
+</ul>
+</li>
+<li><strong>handsome</strong>
+<ul>
+<li>a.&#x7F8E;&#x89C2;&#x7684;&#xFF1B;&#x5DE8;&#x989D;&#x7684;</li>
+</ul>
+</li>
+<li><strong>estimate</strong>
+<ul>
+<li>v./n.&#x4F30;&#x8BA1;&#xFF1B;&#x4F30;&#x7B97;</li>
+</ul>
+</li>
+<li><strong>association</strong>
+<ul>
+<li>n.&#x534F;&#x4F1A;&#xFF1B;&#x8054;&#x76DF;</li>
+</ul>
+</li>
+<li><strong>typically</strong>
+<ul>
+<li>ad.&#x901A;&#x5E38;&#xFF1B;&#x4E00;&#x822C;</li>
+</ul>
+</li>
+<li><strong>render</strong>
+<ul>
+<li>v.&#x4F7F;&#x53D8;&#x6210;&#xFF1B;&#x4F7F;&#x53D8;&#x5F97;</li>
+</ul>
+</li>
+<li><strong>considerably</strong>
+<ul>
+<li>ad.&#x975E;&#x5E38;&#xFF1B;&#x5F88;</li>
 </ul>
 </li>
 </ul>
