--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>a.&#x63D0;&#x5347;&#x601D;&#x60F3;&#x9053;&#x5FB7;&#x6C34;&#x5E73;</li>
 </ul>
 </li>
-<li>**census **
+<li><strong>census</strong>
 <ul>
 <li>n.&#x4EBA;&#x53E3;&#x666E;&#x67E5;</li>
 </ul>
@@ -778,6 +778,93 @@ pre[data-line] .line-highlight[data-end]:after {
 <li><strong>considerably</strong>
 <ul>
 <li>ad.&#x975E;&#x5E38;&#xFF1B;&#x5F88;</li>
+</ul>
+</li>
+</ul>
+<h2 class="mume-header" id="727-2008">7.27 (2008)</h2>
+
+<ul>
+<li><strong>dramatically</strong>
+<ul>
+<li>ad.&#x663E;&#x8457;&#x7684;&#xFF1B;&#x5927;&#x5E45;&#x5EA6;&#x7684;</li>
+</ul>
+</li>
+<li><strong>fit</strong>
+<ul>
+<li>v.&#x5C3A;&#x5BF8;&#x5408;&#x9002;&#xFF1B;&#x5408;&#x8EAB;</li>
+</ul>
+</li>
+<li><strong>obscure</strong>
+<ul>
+<li>v.&#x4F7F;&#x6A21;&#x7CCA;&#xFF1B;&#x63A9;&#x76D6;</li>
+</ul>
+</li>
+<li><strong>tissue</strong>
+<ul>
+<li>n.&#x7EB8;&#x5DFE;&#xFF1B;&#x7EC4;&#x7EC7;</li>
+</ul>
+</li>
+<li><strong>secular</strong>
+<ul>
+<li>a.&#x957F;&#x671F;&#x6027;&#x7684;</li>
+</ul>
+</li>
+<li><strong>substantical</strong>
+<ul>
+<li>a.&#x5927;&#x91CF;&#x7684;&#xFF1B;&#x53EF;&#x89C2;&#x7684;</li>
+</ul>
+</li>
+<li><strong>strain</strong>
+<ul>
+<li>n.&#x538B;&#x529B;&#xFF1B;&#x91CD;&#x8D1F;</li>
+</ul>
+</li>
+</ul>
+<hr>
+<ul>
+<li><strong>understood</strong>
+<ul>
+<li>v.&#x61C2;&#xFF1B;&#x7406;&#x89E3;&#xFF1B;&#x4E86;&#x89E3;</li>
+</ul>
+</li>
+<li>&amp;part
+<ul>
+<li>v.&#x5206;&#x79BB;&#xFF1B;&#x5206;&#x5F00;</li>
+</ul>
+</li>
+<li><strong>institution</strong>
+<ul>
+<li>n.&#x5236;&#x5EA6;</li>
+</ul>
+</li>
+<li>&amp;count
+<ul>
+<li>v.&#x770B;&#x4F5C;&#xFF1B;&#x7B97;&#x4F5C;</li>
+</ul>
+</li>
+<li><strong>inflate</strong>
+<ul>
+<li>v.&#x5927;&#x5E45;&#x589E;&#x52A0;</li>
+</ul>
+</li>
+<li><strong>grant</strong>
+<ul>
+<li>v.&#x6279;&#x51C6;&#xFF1B;&#x6B63;&#x5F0F;&#x7ED9;&#x4E88;</li>
+</ul>
+</li>
+<li>&amp;will
+<ul>
+<li>n.&#x9057;&#x5631;</li>
+</ul>
+</li>
+<li><strong>primitive</strong>
+<ul>
+<li>a.&#x539F;&#x59CB;&#x7684;&#xFF1B;&#x8FDC;&#x53E4;&#x7684;</li>
+</ul>
+</li>
+<li><strong>confront</strong>
+<ul>
+<li>v.&#x4F7F;&#x9762;&#x4E34;</li>
 </ul>
 </li>
 </ul>
