--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>v.&#x61C2;&#xFF1B;&#x7406;&#x89E3;&#xFF1B;&#x4E86;&#x89E3;</li>
 </ul>
 </li>
-<li>&amp;part
+<li><strong>&amp;part</strong>
 <ul>
 <li>v.&#x5206;&#x79BB;&#xFF1B;&#x5206;&#x5F00;</li>
 </ul>
@@ -837,7 +837,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>n.&#x5236;&#x5EA6;</li>
 </ul>
 </li>
-<li>&amp;count
+<li><strong>&amp;count</strong>
 <ul>
 <li>v.&#x770B;&#x4F5C;&#xFF1B;&#x7B97;&#x4F5C;</li>
 </ul>
@@ -852,7 +852,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>v.&#x6279;&#x51C6;&#xFF1B;&#x6B63;&#x5F0F;&#x7ED9;&#x4E88;</li>
 </ul>
 </li>
-<li>&amp;will
+<li><strong>&amp;will</strong>
 <ul>
 <li>n.&#x9057;&#x5631;</li>
 </ul>
@@ -865,6 +865,106 @@ pre[data-line] .line-highlight[data-end]:after {
 <li><strong>confront</strong>
 <ul>
 <li>v.&#x4F7F;&#x9762;&#x4E34;</li>
+</ul>
+</li>
+</ul>
+<h2 class="mume-header" id="728-2009">7.28 (2009)</h2>
+
+<ul>
+<li><strong>herd</strong>
+<ul>
+<li>n.&#x517D;&#x7FA4;&#xFF1B;&#x7267;&#x7FA4;&#xFF1B;&#x4E00;&#x822C;&#x6C11;&#x4F17;</li>
+</ul>
+</li>
+<li><strong>zone</strong>
+<ul>
+<li>n.&#x5730;&#x5E26;&#xFF1B;&#x533A;&#x57DF;</li>
+</ul>
+</li>
+<li><strong>wonder</strong>
+<ul>
+<li>n.&#x60CA;&#x5947;&#xFF1B;&#x60CA;&#x53F9;</li>
+</ul>
+</li>
+<li><strong>approach</strong>
+<ul>
+<li>n.&#x65B9;&#x6CD5;&#xFF1B;&#x6001;&#x5EA6;&#xFF1B;&#x9760;&#x8FD1;</li>
+<li>v.&#x8981;&#x6C42;&#xFF1B;&#x5904;&#x7406;&#xFF1B;&#x5BF9;&#x4ED8;</li>
+</ul>
+</li>
+<li><strong>emphasis</strong>
+<ul>
+<li>n.&#x5F3A;&#x8C03;&#xFF1B;&#x91CD;&#x89C6;</li>
+</ul>
+</li>
+<li><strong>foster</strong>
+<ul>
+<li>v.&#x4FC3;&#x8FDB;&#xFF1B;&#x52A9;&#x957F;&#xFF1B;&#x57F9;&#x517B;</li>
+</ul>
+</li>
+<li><strong>derive</strong>
+<ul>
+<li>v.&#x8D77;&#x6E90;&#x4E8E;&#xFF1B;&#x6765;&#x81EA;</li>
+</ul>
+</li>
+<li><strong>fantastic</strong>
+<ul>
+<li>a.&#x5947;&#x5F02;&#x7684;&#xFF1B;&#x602A;&#x8BDE;&#x7684;</li>
+</ul>
+</li>
+<li><strong>activate</strong>
+<ul>
+<li>v.&#x6FC0;&#x6D3B;&#xFF1B;&#x4F7F;&#x6D3B;&#x5316;</li>
+</ul>
+</li>
+</ul>
+<hr>
+<ul>
+<li><strong>wise</strong>
+<ul>
+<li>a.&#x777F;&#x667A;&#x7684;</li>
+<li>&#x4EE5;......&#x65B9;&#x5F0F;</li>
+</ul>
+</li>
+<li><strong>latest</strong>
+<ul>
+<li>a.&#x6700;&#x8FD1;&#x7684;</li>
+</ul>
+</li>
+<li>&amp;rage
+<ul>
+<li>n.&#x65F6;&#x5C1A;&#xFF1B;&#x6D41;&#x884C;</li>
+</ul>
+</li>
+<li><strong>passionate</strong>
+<ul>
+<li>a.&#x70ED;&#x8BDA;&#x7684;&#xFF1B;&#x72C2;&#x70ED;&#x7684;</li>
+</ul>
+</li>
+<li><strong>candidate</strong>
+<ul>
+<li>n.&#x5019;&#x9009;&#x4EBA;&#xFF1B;&#x7533;&#x8BF7;&#x4EBA;&#xFF1B;&#x88AB;&#x8BA4;&#x5B9A;&#x7684;&#x5408;&#x9002;&#x8005;</li>
+</ul>
+</li>
+<li><strong>hawk</strong>
+<ul>
+<li>n.&#x9E70;</li>
+<li>v.&#x53EB;&#x5356;&#xFF1B;&#x515C;&#x552E;</li>
+</ul>
+</li>
+<li><strong>promotion</strong>
+<ul>
+<li>n.&#x5E7F;&#x544A;&#x5BA3;&#x4F20;&#xFF1B;&#x4FC3;&#x9500;</li>
+</ul>
+</li>
+<li><strong>overlap</strong>
+<ul>
+<li>v.&#x91CD;&#x53E0;&#xFF1B;&#x4EA4;&#x53E0;</li>
+</ul>
+</li>
+<li><strong>against</strong>
+<ul>
+<li>&#x53CD;&#x5BF9;&#xFF1B;&#x8FDD;&#x53CD;</li>
 </ul>
 </li>
 </ul>
