--- a/index.html
+++ b/index.html
@@ -968,6 +968,110 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 </li>
 </ul>
+<h2 class="mume-header" id="729-2009">7.29 (2009)</h2>
+
+<ul>
+<li><strong>radically</strong>
+<ul>
+<li>adv.&#x6839;&#x672C;&#x7684;&#xFF1B;&#x5F7B;&#x5E95;&#x7684;</li>
+</ul>
+</li>
+<li><strong>consistently</strong>
+<ul>
+<li>ad.&#x4E00;&#x81F4;&#x7684;</li>
+</ul>
+</li>
+<li><strong>conventional</strong>
+<ul>
+<li>a.&#x4F20;&#x7EDF;&#x7684;</li>
+</ul>
+</li>
+<li><strong>derided</strong>
+<ul>
+<li>v.&#x5632;&#x7B11;&#xFF1B;&#x611A;&#x5F04;</li>
+</ul>
+</li>
+<li><strong>ironically</strong>
+<ul>
+<li>ad.&#x8BBD;&#x523A;&#x7684;&#x662F;</li>
+</ul>
+</li>
+<li><strong>despite</strong>
+<ul>
+<li>&#x5C3D;&#x7BA1;</li>
+</ul>
+</li>
+<li><strong>suspect</strong>
+<ul>
+<li>v.&#x7591;&#x6709;&#xFF1B;&#x731C;&#x60F3;</li>
+</ul>
+</li>
+<li><strong>substantially</strong>
+<ul>
+<li>ad.&#x5927;&#x5927;&#x7684;</li>
+</ul>
+</li>
+</ul>
+<hr>
+<ul>
+<li><strong>attached</strong>
+<ul>
+<li>a.&#x4F9D;&#x604B;&#x7684;&#xFF1B;&#x6240;&#x9644;&#x5C5E;&#x4E8E;......&#x7684;</li>
+</ul>
+</li>
+<li><strong>established</strong>
+<ul>
+<li>v.&#x4F7F;......&#x88AB;&#x63A5;&#x53D7;&#xFF1B;&#x786E;&#x7ACB;&#xFF1B;&#x5EFA;&#x7ACB;&#xFF1B;</li>
+</ul>
+</li>
+<li><strong>approach</strong>
+<ul>
+<li>n.&#x65B9;&#x6CD5;&#xFF1B;&#x6001;&#x5EA6;&#xFF1B;&#x8DEF;&#x5F84;</li>
+<li>v.&#x8981;&#x6C42;&#xFF1B;&#x5904;&#x7406;</li>
+</ul>
+</li>
+<li><strong>episode</strong>
+<ul>
+<li>n.&#x4E00;&#x4E2A;&#x4E8B;&#x4EF6;</li>
+</ul>
+</li>
+<li><strong>virtuosity</strong>
+<ul>
+<li>n.&#x7CBE;&#x6E5B;&#x7684;&#x6280;&#x827A;</li>
+</ul>
+</li>
+<li><strong>reach</strong>
+<ul>
+<li>v.&#x88AB;&#xB7;&#xB7;&#xB7;&#xB7;&#xB7;&#xB7;&#x770B;&#x5230;</li>
+</ul>
+</li>
+<li><strong>earnestness</strong>
+<ul>
+<li>n.&#x8BA4;&#x771F;&#xFF1B;&#x8BDA;&#x631A;</li>
+</ul>
+</li>
+<li><strong>composition</strong>
+<ul>
+<li>n.&#x4F5C;&#x54C1;</li>
+</ul>
+</li>
+<li><strong>slight</strong>
+<ul>
+<li>a.&#x8F7B;&#x5FAE;&#x7684;</li>
+<li>n.&#x8F7B;&#x89C6;&#xFF1B;&#x51B7;&#x843D;</li>
+</ul>
+</li>
+<li><strong>mock</strong>
+<ul>
+<li>v.&#x5632;&#x7B11;&#xFF1B;&#x5632;&#x5F04;</li>
+</ul>
+</li>
+<li><strong>illusory</strong>
+<ul>
+<li>a.&#x865A;&#x5047;&#x7684;&#xFF1B;&#x5E7B;&#x89C9;&#x7684;</li>
+</ul>
+</li>
+</ul>
 
       </div>
       
