--- a/index.html
+++ b/index.html
@@ -1072,6 +1072,121 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 </li>
 </ul>
+<h2 class="mume-header" id="7302010">7.30(2010)</h2>
+
+<ul>
+<li><strong>inexorable</strong>
+<ul>
+<li>a.&#x4E0D;&#x53EF;&#x963B;&#x6321;&#x7684;</li>
+</ul>
+</li>
+<li><strong>coverage</strong>
+<ul>
+<li>n.&#x65B0;&#x95FB;&#x62A5;&#x9053;</li>
+</ul>
+</li>
+<li><strong>seriousness</strong>
+<ul>
+<li>n.&#x4E25;&#x8083;&#x6027;</li>
+</ul>
+</li>
+<li><strong>to</strong> the point of sth
+<ul>
+<li>&#x8FBE;&#x5230;&#x67D0;&#x79CD;&#x7A0B;&#x5EA6;</li>
+</ul>
+</li>
+<li><strong>granted</strong>
+<ul>
+<li>adv.&#x7684;&#x786E;</li>
+<li>&#x5047;&#x5B9A;&#xB7;&#xB7;&#xB7;&#xB7;&#xB7;&#xB7;</li>
+</ul>
+</li>
+<li><strong>press</strong>
+<ul>
+<li>n.&#x62A5;&#x520A;&#xFF1B;&#x51FA;&#x7248;&#x793E;</li>
+<li>v.&#x538B;</li>
+</ul>
+</li>
+<li>&amp;save
+<ul>
+<li>&#x9664;&#xB7;&#xB7;&#xB7;&#xB7;&#xB7;&#xB7;&#xB7;&#x4EE5;&#x5916;</li>
+</ul>
+</li>
+<li><strong>taste</strong>
+<ul>
+<li>n.&#x5473;&#x9053;&#xFF1B;&#x54C1;&#x5473;&#xFF1B;&#x9274;&#x8D4F;&#x529B;</li>
+</ul>
+</li>
+<li><strong>retreat</strong>
+<ul>
+<li>n.&#x64A4;&#x9000;&#xFF1B;&#x9000;&#x5374;</li>
+</ul>
+</li>
+</ul>
+<hr>
+<ul>
+<li><strong>property</strong>
+<ul>
+<li>n.&#x8D22;&#x4EA7;&#xFF1B;&#x7279;&#x6027;</li>
+</ul>
+</li>
+<li><strong>eliminate</strong>
+<ul>
+<li>v.&#x6D88;&#x9664;&#xFF1B;&#x6E05;&#x9664;&#xFF1B;&#x6DD8;&#x6C70;</li>
+</ul>
+</li>
+<li><strong>abuzz</strong>
+<ul>
+<li>a.&#x8BAE;&#x8BBA;&#x7EB7;&#x7EB7;&#x7684;</li>
+</ul>
+</li>
+<li><strong>curb</strong>
+<ul>
+<li>n.&#x63A7;&#x5236;&#xFF1B;&#x9650;&#x5236;</li>
+</ul>
+</li>
+<li><strong>filings</strong>
+<ul>
+<li>n.&#x5B58;&#x6863;&#x6863;&#x6848;&#xFF1B;&#x5F52;&#x6863;&#x8BB0;&#x5F55;</li>
+</ul>
+</li>
+<li><strong>rival</strong>
+<ul>
+<li>n.&#x7ADE;&#x4E89;&#x8005;&#xFF1B;&#x5BF9;&#x624B;</li>
+</ul>
+</li>
+<li><strong>hedge</strong>
+<ul>
+<li>v.&#x91C7;&#x53D6;&#x4FDD;&#x62A4;&#x63AA;&#x65BD;&#xFF1B;&#x89C4;&#x907F;</li>
+</ul>
+</li>
+<li><strong>narrow</strong>
+<ul>
+<li>a.&#x72ED;&#x7A84;&#x7684;&#xFF1B;&#x52C9;&#x5F3A;&#x7684;</li>
+<li>v.&#x7F29;&#x5C0F;</li>
+</ul>
+</li>
+<li><strong>obvious</strong>
+<ul>
+<li>a.&#x660E;&#x663E;&#x7684;&#xFF1B;&#x5E73;&#x6DE1;&#x65E0;&#x5947;&#x7684;</li>
+</ul>
+</li>
+<li><strong>dismiss</strong>
+<ul>
+<li>v.&#x4E0D;&#x4E88;&#x8003;&#x8651;&#xFF1B;&#x9A73;&#x56DE;</li>
+</ul>
+</li>
+<li><strong>immune</strong>
+<ul>
+<li>a.&#x4E0D;&#x53D7;&#x5F71;&#x54CD;&#x7684;</li>
+</ul>
+</li>
+<li><strong>challenge</strong>
+<ul>
+<li>n.&#x6311;&#x6218;&#xFF1B;&#x8D28;&#x7591;</li>
+</ul>
+</li>
+</ul>
 
       </div>
       
