--- a/index.html
+++ b/index.html
@@ -1187,6 +1187,108 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 </li>
 </ul>
+<h2 class="mume-header" id="731-2010">7.31 (2010)</h2>
+
+<ul>
+<li><strong>drive</strong>
+<ul>
+<li>v.&#x9A7E;&#x9A76;&#xFF1B;&#x5F00;&#x8F66;&#xFF1B;&#x9A71;&#x52A8;</li>
+</ul>
+</li>
+<li><strong>minority</strong>
+<ul>
+<li>n.&#x5C11;&#x6570;&#xFF1B;&#x5C11;&#x6570;&#x4EBA;</li>
+</ul>
+</li>
+<li><strong>embrace</strong>
+<ul>
+<li>n.&#x62E5;&#x62B1;&#xFF1B;&#x63A5;&#x53D7;</li>
+</ul>
+</li>
+<li><strong>cursory</strong>
+<ul>
+<li>a.&#x7C97;&#x7565;&#x7684;</li>
+</ul>
+</li>
+<li><strong>presence</strong>
+<ul>
+<li>n.&#x5728;&#x573A;&#xFF1B;&#x51FA;&#x5E2D;&#xFF1B;&#x5B58;&#x5728;</li>
+</ul>
+</li>
+<li><strong>readiness</strong>
+<ul>
+<li>n.&#x613F;&#x610F;</li>
+</ul>
+</li>
+</ul>
+<hr>
+<ul>
+<li><strong>fetch</strong>
+<ul>
+<li>v.&#x53BB;&#x62FF;&#xFF1B;&#x53BB;&#x53D6;&#xFF1B;&#x552E;&#x5F97;</li>
+</ul>
+</li>
+<li><strong>lobby</strong>
+<ul>
+<li>v.&#x6E38;&#x8BF4;</li>
+</ul>
+</li>
+<li><strong>compromise</strong>
+<ul>
+<li>v.&#x5371;&#x5BB3;</li>
+</ul>
+</li>
+<li><strong>proper</strong>
+<ul>
+<li>a.&#x6070;&#x5F53;&#x5F97;&#xFF1B;&#x50CF;&#x6837;&#x7684;</li>
+</ul>
+</li>
+<li><strong>encounter</strong>
+<ul>
+<li>v.&#x906D;&#x9047;&#xFF1B;&#x5076;&#x9047;</li>
+</ul>
+</li>
+<li><strong>bruising</strong>
+<ul>
+<li>a.&#x6781;&#x4E3A;&#x8D39;&#x529B;&#x7684;&#xFF1B;&#x6FC0;&#x70C8;&#x7684;</li>
+</ul>
+</li>
+<li><strong>statement</strong>
+<ul>
+<li>n.&#x58F0;&#x660E;&#xFF1B;&#x8BF4;&#x6CD5;&#xFF1B;&#x7ED3;&#x7B97;&#x8D26;&#x5355;</li>
+</ul>
+</li>
+<li><strong>temporary</strong>
+<ul>
+<li>a.&#x6682;&#x65F6;&#x7684;&#xFF1B;&#x4E34;&#x65F6;&#x7684;</li>
+</ul>
+</li>
+<li><strong>trade</strong>
+<ul>
+<li>n.&#x8D38;&#x6613;&#xFF1B;&#x624B;&#x827A;</li>
+</ul>
+</li>
+<li><strong>reluctant</strong>
+<ul>
+<li>a.&#x52C9;&#x5F3A;&#x7684;&#xFF1B;&#x4E0D;&#x60C5;&#x613F;&#x7684;</li>
+</ul>
+</li>
+<li><strong>dealt</strong>
+<ul>
+<li>v.&#x5206;&#x914D;&#xFF1B;&#x7ECF;&#x8425;</li>
+</ul>
+</li>
+<li><strong>mark</strong>
+<ul>
+<li>v.&#x6807;&#x660E;&#xFF1B;&#x6CE8;&#x793A;&#xFF1B;</li>
+</ul>
+</li>
+<li><strong>give</strong> in to
+<ul>
+<li>&#x5C48;&#x670D;&#xFF1B;&#x8BA4;&#x8F93;</li>
+</ul>
+</li>
+</ul>
 
       </div>
       
