--- a/index.html
+++ b/index.html
@@ -335,7 +335,105 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>v.&#x5206;&#x62C5;</li>
 </ul>
 </li>
-<li></li>
+</ul>
+<h2 class="mume-header" id="87-10">8.7 (10)</h2>
+
+<ul>
+<li>turned to
+<ul>
+<li>&#x5411;&#xB7;&#xB7;&#xB7;&#x6C42;&#x52A9;&#xFF1B;&#x8F6C;&#x5411;&#xB7;&#xB7;&#xB7;&#xFF1B;</li>
+</ul>
+</li>
+<li>scrub
+<ul>
+<li>v.&#x64E6;&#x6D17;&#xFF1B;&#x53D6;&#x6D88;&#xFF08;&#x539F;&#x6709;&#x8BA1;&#x5212;&#x5B89;&#x6392;&#xFF09;</li>
+</ul>
+</li>
+<li>spring
+<ul>
+<li>n.&#x6625;&#x5929;&#xFF1B;&#x6CC9;</li>
+</ul>
+</li>
+<li>essential
+<ul>
+<li>a.&#x5FC5;&#x4E0D;&#x53EF;&#x5C11;&#x7684;&#xFF1B;&#x57FA;&#x672C;&#x7684;</li>
+</ul>
+</li>
+<li>tying(tie&#x7684;&#x73B0;&#x5728;&#x5206;&#x8BCD;)
+<ul>
+<li>v.&#x7CFB;&#xFF1B;&#x6253;&#x7ED3;&#xFF1B;&#x8FDE;&#x63A5;</li>
+</ul>
+</li>
+<li>certain
+<ul>
+<li>a.&#x5FC5;&#x7136;&#x7684;&#xFF1B;&#x786E;&#x4FE1;&#x7684;</li>
+</ul>
+</li>
+</ul>
+<hr>
+<ul>
+<li>concrete
+<ul>
+<li>a.&#x786E;&#x5B9E;&#x7684;&#xFF1B;&#x5177;&#x4F53;&#x7684;&#xFF1B;&#x6DF7;&#x51DD;&#x571F;&#x5236;&#x7684;&#xFF1B;</li>
+<li>n.&#x6DF7;&#x51DD;&#x571F;</li>
+</ul>
+</li>
+<li>trial
+<ul>
+<li>n.&#x5BA1;&#x5224;&#xFF1B;&#x8BD5;&#x9A8C;&#xFF1B;&#x8003;&#x9A8C;</li>
+<li>v.&#x6D4B;&#x8BD5;</li>
+</ul>
+</li>
+<li>regularly
+<ul>
+<li>adv.&#x6709;&#x89C4;&#x5F8B;&#x7684;&#xFF1B;&#x7ECF;&#x5E38;&#x6027;&#x7684;</li>
+</ul>
+</li>
+<li>regulate
+<ul>
+<li>v.&#x7BA1;&#x7406;&#xFF1B;&#x7EA6;&#x675F;&#xFF1B;&#x8C03;&#x6574;</li>
+</ul>
+</li>
+<li>not until
+<ul>
+<li>&#x76F4;&#x5230;&#xB7;&#xB7;&#xB7;&#x4E3A;&#x6B62;</li>
+</ul>
+</li>
+<li>justified
+<ul>
+<li>a.&#x6709;&#x6B63;&#x5F53;&#x7406;&#x7531;&#x7684;</li>
+</ul>
+</li>
+<li>usher
+<ul>
+<li>v.&#x628A;&#xB7;&#xB7;&#xB7;&#x5F15;&#x5F80;&#xFF0C;&#x5F15;&#x9886;</li>
+</ul>
+</li>
+<li>entire
+<ul>
+<li>a.&#x6574;&#x4E2A;&#x7684;&#xFF1B;&#x5168;&#x90E8;&#x7684;</li>
+</ul>
+</li>
+<li>unconstitutional
+<ul>
+<li>a.&#x8FDD;&#x5BAA;&#x6CD5;&#x7684;</li>
+</ul>
+</li>
+<li>conform
+<ul>
+<li>vi.&#x9075;&#x5B88;&#xFF1B;&#x76F8;&#x4E00;&#x81F4;</li>
+</ul>
+</li>
+<li>ought
+<ul>
+<li>&#x5E94;&#x8BE5;</li>
+</ul>
+</li>
+<li>seldom
+<ul>
+<li>adv.&#x5F88;&#x5C11;&#xFF0C;&#x96BE;&#x5F97;</li>
+</ul>
+</li>
 </ul>
 
       </div>
