--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ pre[data-line] .line-highlight[data-end]:after {
 </li>
 <li>regularly
 <ul>
-<li>adv.&#x6709;&#x89C4;&#x5F8B;&#x7684;&#xFF1B;&#x7ECF;&#x5E38;&#x6027;&#x7684;</li>
+<li>adv.&#x6709;&#x89C4;&#x5F8B;&#x5730;&#xFF1B;&#x7ECF;&#x5E38;&#x6027;&#x5730;</li>
 </ul>
 </li>
 <li>regulate
@@ -432,6 +432,100 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>seldom
 <ul>
 <li>adv.&#x5F88;&#x5C11;&#xFF0C;&#x96BE;&#x5F97;</li>
+</ul>
+</li>
+</ul>
+<h2 class="mume-header" id="88-11">8.8 (11)</h2>
+
+<ul>
+<li>rest
+<ul>
+<li>n.&#x5269;&#x4F59;&#x90E8;&#x5206;&#xFF1B;&#x4F11;&#x606F;&#x65F6;&#x95F4;</li>
+</ul>
+</li>
+<li>restate
+<ul>
+<li>v.&#x91CD;&#x7533;&#xFF0C;&#x91CD;&#x65B0;&#x8868;&#x8FF0;</li>
+</ul>
+</li>
+<li>blow
+<ul>
+<li>v.&#x5439;&#xFF1B;&#x70B8;&#x5F00;</li>
+<li>n.&#x731B;&#x51FB;&#xFF1B;&#x6253;&#x51FB;</li>
+</ul>
+</li>
+</ul>
+<hr>
+<ul>
+<li>flee
+<ul>
+<li>v.&#x9003;&#x79BB;&#xFF1B;&#x9003;&#x907F;</li>
+</ul>
+</li>
+<li>charitable
+<ul>
+<li>a.&#x6148;&#x5584;&#x7684;&#xFF1B;&#x4EC1;&#x6148;&#x7684;</li>
+</ul>
+</li>
+<li>out of date
+<ul>
+<li>&#x8FC7;&#x65F6;&#x7684;</li>
+</ul>
+</li>
+<li>shrug off
+<ul>
+<li>&#x6296;&#x53BB;&#xFF1B;&#x6446;&#x8131;</li>
+</ul>
+</li>
+<li>margins
+<ul>
+<li>n.&#x8FB9;&#xFF1B;&#x5229;&#x6DA6;&#xFF1B;&#x5DEE;&#x6570;</li>
+</ul>
+</li>
+<li>routine
+<ul>
+<li>n.&#x60EF;&#x4F8B;&#xFF1B;&#x4F8B;&#x7A0B;</li>
+<li>a.&#x5E38;&#x89C4;&#x7684;&#xFF1B;&#x4E4F;&#x5473;&#x7684;</li>
+</ul>
+</li>
+<li>afloat
+<ul>
+<li>a.&#x6F02;&#x6D6E;&#xFF1B;&#x80FD;&#x7EF4;&#x6301;&#x4E0B;&#x53BB;</li>
+</ul>
+</li>
+<li>overboard
+<ul>
+<li>adv.&#x88C1;&#x5458;&#xFF1B;&#x4ECE;&#x8239;&#x4E0A;&#x6389;&#x4E0B;</li>
+</ul>
+</li>
+<li>nerve
+<ul>
+<li>n.&#x795E;&#x7ECF;&#xFF1B;&#x52C7;&#x6C14;&#xFF1B;&#x7126;&#x8651;&#xFF1B;&#x539A;&#x989C;</li>
+</ul>
+</li>
+<li>slimmer
+<ul>
+<li>n.&#x51CF;&#x80A5;&#x8005;&#xFF1B;&#x7F29;&#x6C34;</li>
+</ul>
+</li>
+<li>disperse
+<ul>
+<li>v.&#xFF08;&#x4F7F;&#xFF09;&#x6563;&#x5F00;&#xFF1B;&#xFF08;&#x4F7F;&#xFF09;&#x6269;&#x6563;</li>
+</ul>
+</li>
+<li>desperate
+<ul>
+<li>a.&#x7EDD;&#x671B;&#x7684;&#xFF1B;&#x6E34;&#x671B;&#x7684;&#xFF1B;&#x5B64;&#x6CE8;&#x4E00;&#x63B7;&#x7684;</li>
+</ul>
+</li>
+<li>healthy
+<ul>
+<li>a.&#x5065;&#x5EB7;&#x7684;&#xFF1B;&#x5408;&#x60C5;&#x7406;&#x7684;</li>
+</ul>
+</li>
+<li>savagely
+<ul>
+<li>adv.&#x91CE;&#x86EE;&#x7684;&#xFF1B;&#x6B8B;&#x66B4;&#x7684;</li>
 </ul>
 </li>
 </ul>
