--- a/index.html
+++ b/index.html
@@ -529,6 +529,100 @@ pre[data-line] .line-highlight[data-end]:after {
 </ul>
 </li>
 </ul>
+<h2 class="mume-header" id="89-11">8.9 (11)</h2>
+
+<ul>
+<li>stimulus
+<ul>
+<li>n.&#x523A;&#x6FC0;&#x7269;&#xFF1B;&#x523A;&#x6FC0;</li>
+</ul>
+</li>
+<li>grant
+<ul>
+<li>v.&#x6279;&#x51C6;&#xFF1B;&#x627F;&#x8BA4;</li>
+</ul>
+</li>
+<li>sophisticated
+<ul>
+<li>a.&#x89C1;&#x591A;&#x8BC6;&#x5E7F;&#x7684;&#xFF1B;&#x7CBE;&#x5BC6;&#x7684;</li>
+</ul>
+</li>
+<li>emptiness
+<ul>
+<li>n.&#x7A7A;&#x865A;&#xFF1B;&#x7A7A;&#x65F7;</li>
+</ul>
+</li>
+<li>glass
+<ul>
+<li>n.&#x73BB;&#x7483;&#xFF1B;&#x773C;&#x955C;</li>
+</ul>
+</li>
+<li>airy
+<ul>
+<li>a.&#x901A;&#x98CE;&#x7684;&#xFF1B;&#x6F2B;&#x4E0D;&#x7ECF;&#x5FC3;&#x7684;</li>
+</ul>
+</li>
+<li>commission
+<ul>
+<li>n.&#x59D4;&#x5458;&#x4F1A;&#xFF1B;&#x4F63;&#x91D1;&#xFF1B;&#x59D4;&#x6258;</li>
+</ul>
+</li>
+<li>homegrown
+<ul>
+<li>a.&#x672C;&#x56FD;&#x4EA7;&#x7684;&#xFF1B;&#x672C;&#x571F;&#x529B;&#x91CF;</li>
+</ul>
+</li>
+</ul>
+<hr>
+<ul>
+<li>stuck
+<ul>
+<li>a.&#x5361;&#x4F4F;&#x7684;&#xFF1B;&#x56F0;&#x4E8E;&#xB7;&#xB7;&#xB7;&#x7684;</li>
+</ul>
+</li>
+<li>borrow
+<ul>
+<li>v.&#x501F;&#x7528;&#xFF1B;&#x5F15;&#x7528;</li>
+</ul>
+</li>
+<li>quasi
+<ul>
+<li>&#x7C7B;&#x4F3C;&#xFF1B;&#x51C6;</li>
+</ul>
+</li>
+<li>rigour
+<ul>
+<li>n.&#x4E25;&#x5BC6;&#xFF1B;&#x4E25;&#x9177;</li>
+</ul>
+</li>
+<li>via
+<ul>
+<li>&#x7ECF;&#x7531;&#xFF1B;&#x51ED;&#x501F;</li>
+</ul>
+</li>
+<li>cheaper
+<ul>
+<li>a.&#x5EC9;&#x4EF7;&#x7684;&#xFF1B;&#x4F4E;&#x4FD7;&#x7684;</li>
+</ul>
+</li>
+<li>curb
+<ul>
+<li>v.&#x63A7;&#x5236;&#xFF1B;&#x6291;&#x5236;</li>
+</ul>
+</li>
+<li>border
+<ul>
+<li>n.&#x8FB9;&#x754C;&#xFF1B;&#x82B1;&#x5E26;</li>
+<li>v.&#x73AF;&#x7ED5;</li>
+</ul>
+</li>
+<li>edge
+<ul>
+<li>n.&#x8FB9;&#x7EBF;&#xFF1B;&#x4F18;&#x52BF;&#xFF1B;&#x5F71;&#x54CD;&#x529B;</li>
+<li>v.&#x7F13;&#x6162;&#x7684;&#x79FB;&#x52A8;&#xFF1B;&#x7565;&#x5FAE;&#x589E;&#x52A0;</li>
+</ul>
+</li>
+</ul>
 
       </div>
       
