--- a/index.html
+++ b/index.html
@@ -291,6 +291,11 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>v.&#x9012;&#x9001;&#xFF1B;&#x4F20;&#x9001;&#xFF1B;&#x5151;&#x73B0;&#xFF1B;&#x53D1;&#x8868;&#xFF08;&#x8BB2;&#x8BDD;&#xFF09;</li>
 </ul>
 </li>
+<li>matched
+<ul>
+<li>a.&#x76F8;&#x914D;&#x7684;&#xFF1B;&#x52BF;&#x5747;&#x529B;&#x654C;&#x7684;</li>
+</ul>
+</li>
 </ul>
 <hr>
 <ul>
@@ -306,7 +311,7 @@ pre[data-line] .line-highlight[data-end]:after {
 </li>
 <li>address
 <ul>
-<li>n.&#x5730;&#x5740;&#xFF1B;&#x6F14;&#x8BF4;</li>
+<li>n.&#x5730;&#x5740;&#xFF1B;&#x6F14;&#x8BF4;&#xFF1B;&#x5904;&#x7406;</li>
 </ul>
 </li>
 <li>particuar
@@ -620,6 +625,136 @@ pre[data-line] .line-highlight[data-end]:after {
 <ul>
 <li>n.&#x8FB9;&#x7EBF;&#xFF1B;&#x4F18;&#x52BF;&#xFF1B;&#x5F71;&#x54CD;&#x529B;</li>
 <li>v.&#x7F13;&#x6162;&#x7684;&#x79FB;&#x52A8;&#xFF1B;&#x7565;&#x5FAE;&#x589E;&#x52A0;</li>
+</ul>
+</li>
+</ul>
+<h2 class="mume-header" id="812-12">8.12 (12)</h2>
+
+<ul>
+<li>pastel
+<ul>
+<li>n.&#x8721;&#x7B14;&#x753B;&#xFF1B;&#x6DE1;&#x5F69;&#x8272;</li>
+<li>a.&#x6DE1;&#x7684;&#xFF1B;&#x67D4;&#x548C;&#x7684;</li>
+</ul>
+</li>
+<li>intimate
+<ul>
+<li>v.&#x6697;&#x793A;</li>
+</ul>
+</li>
+<li>constancy
+<ul>
+<li>n.&#x7A33;&#x5B9A;&#x6027;&#xFF1B;&#x6301;&#x4E45;&#x4E0D;&#x53D8;&#x6027;</li>
+</ul>
+</li>
+<li>toddler
+<ul>
+<li>n.&#x5B66;&#x6B65;&#x7684;&#x513F;&#x7AE5;</li>
+</ul>
+</li>
+<li>previously
+<ul>
+<li>adv.&#x5148;&#x524D;&#xFF1B;&#x4EE5;&#x524D;</li>
+</ul>
+</li>
+<li>sequencing
+<ul>
+<li>n.&#x6392;&#x5E8F;&#xFF0C;&#x6D4B;&#x5E8F;</li>
+</ul>
+</li>
+<li>authoritative
+<ul>
+<li>a.&#x6709;&#x5A01;&#x4FE1;&#x7684;&#xFF1B;&#x6709;&#x6743;&#x5A01;&#x7684;</li>
+</ul>
+</li>
+</ul>
+<h2 class="mume-header" id="813-12">8.13 (12)</h2>
+
+<ul>
+<li>struggle
+<ul>
+<li>vi.&#x52AA;&#x529B;&#xFF1B;&#x8270;&#x96BE;&#x5730;&#x524D;&#x884C;&#xFF1B;&#x6597;&#x4E89;</li>
+<li>n.&#x6597;&#x4E89;&#xFF0C;&#x52AA;&#x529B;&#xFF1B;&#x626D;&#x6253;&#xFF1B;&#x96BE;&#x4E8B;</li>
+</ul>
+</li>
+</ul>
+<h2 class="mume-header" id="814-13">8.14 (13)</h2>
+
+<ul>
+<li>price
+<ul>
+<li>n.&#x4EF7;&#x683C;</li>
+</ul>
+</li>
+<li>piece
+<ul>
+<li>n.&#x7247;&#xFF1B;&#x788E;&#x7247;&#xFF1B;&#x4E00;&#x4E2A;</li>
+</ul>
+</li>
+<li>field
+<ul>
+<li>n.&#x7530;&#xFF1B;&#x9886;&#x57DF;&#xFF1B;&#x8FD0;&#x52A8;&#x573A;</li>
+</ul>
+</li>
+<li>employment
+<ul>
+<li>n.&#x5728;&#x804C;&#xFF1B;&#x4F7F;&#x7528;&#xFF1B;&#x96C7;&#x4F63;</li>
+</ul>
+</li>
+<li>forever
+<ul>
+<li>adv.&#x6C38;&#x6052;&#x7684;&#xFF1B;&#x6C38;&#x4E45;&#x7684;</li>
+</ul>
+</li>
+<li>shed
+<ul>
+<li>n.&#x5382;&#x623F;&#xFF1B;&#x68DA;&#x5C4B;</li>
+<li>v.&#x53BB;&#x9664;&#xFF1B;&#x4F7F;&#x843D;&#x4E0B;&#xFF1B;&#x6D41;&#xFF08;&#x6CEA;&#x3001;&#x8840;&#xFF09;</li>
+</ul>
+</li>
+<li>erase
+<ul>
+<li>v.&#x6D88;&#x9664;&#xFF1B;&#x62B9;&#x53BB;&#xFF1B;&#x5220;&#x9664;</li>
+</ul>
+</li>
+<li>previous
+<ul>
+<li>a.&#x5148;&#x524D;&#x7684;</li>
+</ul>
+</li>
+<li>total
+<ul>
+<li>a.&#x5168;&#x90E8;&#x7684;&#xFF1B;&#x603B;&#x8BA1;&#x7684;</li>
+</ul>
+</li>
+<li>straddle
+<ul>
+<li>v.&#x9A91;&#xFF1B;&#x5750;&#xFF1B;&#x6A2A;&#x8DE8;</li>
+</ul>
+</li>
+<li>permanent
+<ul>
+<li>a.&#x6C38;&#x4E45;&#x7684;&#xFF1B;&#x6C38;&#x6052;&#x7684;</li>
+</ul>
+</li>
+<li>brand
+<ul>
+<li>n.&#x54C1;&#x724C;&#xFF1B;&#x4E00;&#x79CD;</li>
+</ul>
+</li>
+<li>framework
+<ul>
+<li>n.&#x6846;&#x67B6;&#xFF1B;&#x7ED3;&#x6784;</li>
+</ul>
+</li>
+<li>broken
+<ul>
+<li>a.&#x7834;&#x635F;&#x7684;&#xFF1B;&#x7834;&#x706D;&#x7684;</li>
+</ul>
+</li>
+<li>recognize
+<ul>
+<li>v.&#x8BA4;&#x51FA;&#xFF1B;&#x627F;&#x8BA4;</li>
 </ul>
 </li>
 </ul>
