--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0094)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote2023922-14788-tkejeo.p27p.html -->
+<!-- saved from url=(0094)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote2023923-1184-8zif2z.fz8yg.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>真题一刷知识点</title>
       
@@ -402,8 +402,10 @@
 <li>①<strong>晶体结构</strong>：晶体结构相同是组元间形成无限固溶体的必要条件。</li>
 <li>②<strong>原子尺寸因素</strong>：原子半径差△r&lt;15%时，有利于形成固溶度较大的固溶体；而当△r&gt;15%时，△r越大，则溶解度越小。</li>
 <li>③<strong>化学亲和力</strong>：溶质与溶剂之间的化学亲和力越强，即合金组元间的电负性差越大，倾向于生成化合物而不利于形成固溶体；生成的化合物越稳定，则固溶体溶解度就越小。只有电负性相近的元素才可能具有大的溶解度。</li>
-<li>④<strong>原子价因素</strong>：一是<strong>原子价效应</strong>，即同一溶剂金属，溶质原子价越高，溶解度越小；二是<strong>相对价效应</strong>，高价溶质溶入低价溶剂时的溶解度高于相反情况
+<li>④<strong>原子价因素</strong>：
 <ul>
+<li>一是<strong>原子价效应</strong>，即同一溶剂金属，溶质原子价越高，溶解度越小；</li>
+<li>二是<strong>相对价效应</strong>，高价溶质溶入低价溶剂时的溶解度高于相反情况</li>
 <li>溶质原子价的影响实质上是“电子浓度”所决定的。所谓电子浓度就是合金中的价电子数与原子数目的比值。</li>
 </ul>
 </li>
@@ -424,7 +426,7 @@
 </ul>
 <h3 id="4临界分切应力">4.临界分切应力 </h3>
 <ul>
-<li>晶体的滑移是在切应力作用下进行的，但其中许多滑移系并非同时参与滑移，而只有当外力在某一滑移系中的分切应力达到一定的临界值时，该滑移系方可首先发生滑移，该分切应力称为滑多的临界分切应力。</li>
+<li>晶体的滑移是在切应力作用下进行的，但其中许多滑移系并非同时参与滑移，而只有当外力在某一滑移系中的分切应力达到一定的临界值时，该滑移系方可首先发生滑移，该分切应力称为滑移的临界分切应力。</li>
 </ul>
 <h3 id="5聚合物的构型">5.聚合物的构型 </h3>
 <ul>
@@ -469,7 +471,8 @@
 </ul>
 <h4 id="4复合材料">(4)复合材料 </h4>
 <ul>
-<li>由两种或两种以上物理和化学性质不同的材料组合而成。特点结合键种类繁多，非常复杂，性能差异大。</li>
+<li>由两种或两种以上物理和化学性质不同的材料组合而成。</li>
+<li><strong>特点</strong>：结合键种类繁多，非常复杂，性能差异大。</li>
 </ul>
 <h2 id="2010838">⚑2010（838） </h2>
 <h3 id="1杠杆定律">1.杠杆定律 </h3>
@@ -500,7 +503,10 @@
 <li>面缺陷，其特征是在一个方向上尺寸很小，另外两个方向上扩展很大，也称二维缺陷。<strong>晶界、相界、孪晶界和堆垛层错等都属于面缺陷</strong></li>
 </ul>
 <h3 id="6晶体结构与空间点阵的关系">6.晶体结构与空间点阵的关系 </h3>
-<p>空间点阵是晶体中质点点阵的具体抽象，用以描述和分析晶体结构的周期性和对称性，由于各质点周围环境相同，它只有14种类型；而晶体结构则是指晶体中实际质点的排列情况，它们能组成各种类型的结构，因此，实际存在的晶体结构是无限的。</p>
+<ul>
+<li><strong>空间点阵是晶体中质点点阵的具体抽象</strong>，用以描述和分析晶体结构的周期性和对称性，由于各质点周围环境相同，它只有14种类型；</li>
+<li><strong>而晶体结构则是指晶体中实际质点的排列情况</strong>，它们能组成各种类型的结构，因此，实际存在的晶体结构是无限的。</li>
+</ul>
 <h3 id="7什么是晶体中的原子配位数影响配位数多少的因素是什么">7.什么是晶体中的原子配位数？影响配位数多少的因素是什么？ </h3>
 <ul>
 <li>晶体中原子的配位数是<strong>反映原子排列紧密程度的物理量之一</strong>，指晶格中任一原子周围与其最近邻且等距离的原子数目。<strong>一般配位数越大，晶体排列结构越紧密。</strong></li>
