--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0094)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote2023923-1184-8zif2z.fz8yg.html -->
+<!-- saved from url=(0095)file:///C:/Users/%E6%80%92%E6%98%9F/AppData/Local/Temp/crossnote2023925-15380-4udw8d.mognu.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>真题一刷知识点</title>
       
@@ -27,11 +27,11 @@
       <div class="crossnote markdown-preview  ">
       
 <h1 id="真题一刷知识点">真题一刷知识点 </h1>
-<h2 id="-2003">⚑ 2003 </h2>
-<h3 id="1电子浓度">1.电子浓度 </h3>
+<h2 id="-2003">🧐 2003 </h2>
+<h3 id="1电子浓度">💢1.电子浓度 </h3>
 <pre class="language-text">电子浓度=合金的价电子数/原子数
 </pre>
-<h3 id="2金属材料的强化方法及其原理四大强化">2.金属材料的强化方法及其原理（四大强化） </h3>
+<h3 id="2金属材料的强化方法及其原理四大强化">💢2.金属材料的强化方法及其原理（四大强化） </h3>
 <h4 id="1细晶强化">(1)细晶强化 </h4>
 <ul>
 <li>通过细化晶粒的同时来提高金属的强度、硬度、塑性、韧性的方法称为细晶强化
@@ -113,7 +113,7 @@
 </ul>
 </li>
 </ul>
-<h3 id="3再结晶温度的影响因素">3.再结晶温度的影响因素 </h3>
+<h3 id="3再结晶温度的影响因素">💢3.再结晶温度的影响因素 </h3>
 <ul>
 <li>①<strong>变形程度</strong>
 <ul>
@@ -144,7 +144,7 @@
 </ul>
 </li>
 </ul>
-<h3 id="4影响再结晶晶粒大小的因素">4.影响再结晶晶粒大小的因素 </h3>
+<h3 id="4影响再结晶晶粒大小的因素">💢4.影响再结晶晶粒大小的因素 </h3>
 <ul>
 <li>①<strong>变形度</strong>
 <ul>
@@ -172,24 +172,24 @@
 </ul>
 </li>
 </ul>
-<h2 id="-2004">⚑ 2004 </h2>
-<h3 id="1本质晶粒度">1.本质晶粒度 </h3>
+<h2 id="-2004">🧐 2004 </h2>
+<h3 id="1本质晶粒度">💢1.本质晶粒度 </h3>
 <ul>
 <li>是根据标准试验方法，<strong>在930℃±10℃保温3-8h后测定钢中晶粒的大小，表示钢在一定条件下奥氏体晶粒长大的倾向性</strong>。</li>
 </ul>
-<h3 id="2何谓一次渗碳体-二次渗碳体-三次渗碳体在显微镜下它们的形态有何特点">2.何谓一次渗碳体、二次渗碳体、三次渗碳体？在显微镜下它们的形态有何特点？ </h3>
+<h3 id="2何谓一次渗碳体-二次渗碳体-三次渗碳体在显微镜下它们的形态有何特点">💢2.何谓一次渗碳体、二次渗碳体、三次渗碳体？在显微镜下它们的形态有何特点？ </h3>
 <ul>
 <li>从<strong>液态铁碳合金</strong>中结晶出的先共晶渗碳体称为一次渗碳体。其<strong>形态呈粗大较规则的板片状</strong>。</li>
 <li>从<strong>奥氏体</strong>中析出的渗碳体称为二次渗碳体。其形态一般<strong>沿奥氏体晶界呈网状分布</strong>。</li>
 <li>从<strong>铁素体</strong>中析出的渗碳体称为三次渗碳体。其形态一般<strong>沿铁素体晶界呈断续的片状</strong>。</li>
 </ul>
-<h3 id="3钢的淬透性-淬透深度和淬硬性三者之间的区别何在">3.钢的淬透性、淬透深度和淬硬性三者之间的区别何在？ </h3>
+<h3 id="3钢的淬透性-淬透深度和淬硬性三者之间的区别何在">💢3.钢的淬透性、淬透深度和淬硬性三者之间的区别何在？ </h3>
 <ul>
 <li><strong>淬透性</strong>是指钢在淬火时能够获得马氏体的能力。它是钢材本身固有的一种属性。它主要与钢的过冷奥氏体稳定性或钢的临界淬火冷却速度有关。而这些影响因素又与合金元素含量密切相关。</li>
 <li><strong>淬透深度</strong>指的是工件表面到半马氏体区的距离。它除取决于钢的淬透性外，还与所采用的冷却介质、工件尺寸等外部因素有关。</li>
 <li><strong>淬硬性</strong>是指钢在理想条件下进行淬火所能达到最高硬度的能力。主要于钢中的含碳量相关。</li>
 </ul>
-<h3 id="4何谓临界分切应力定律与哪些因素有关">4.何谓临界分切应力定律？与哪些因素有关？ </h3>
+<h3 id="4何谓临界分切应力定律与哪些因素有关">💢4.何谓临界分切应力定律？与哪些因素有关？ </h3>
 <ul>
 <li>在晶体变形时，<strong>使某一滑移系开动的力是外力作用在该滑移系上的分切应力</strong>。实验证明只有当该分切应力达到一定值后，滑移系才能开动。使滑移系开动的最小分切应力称为临界分切应力，它与滑移系的取向无关，并被称为临界分切应力定律。</li>
 <li>影响因素
@@ -201,9 +201,9 @@
 </ul>
 </li>
 </ul>
-<h3 id="5为了使合金在尽可能短的时间内成分均匀化如何制定退火工艺">5.为了使合金在尽可能短的时间内成分均匀化，如何制定退火工艺？ </h3>
-<h3 id="6贝氏体转变与珠光体转变有哪些异同点">6.贝氏体转变与珠光体转变有哪些异同点？ </h3>
-<h3 id="7简述固态相变和液固相变的异同点分析这类特点对所形成的组织有何影响">7.简述固态相变和液固相变的异同点。分析这类特点对所形成的组织有何影响 </h3>
+<h3 id="5为了使合金在尽可能短的时间内成分均匀化如何制定退火工艺">💢5.为了使合金在尽可能短的时间内成分均匀化，如何制定退火工艺？ </h3>
+<h3 id="6贝氏体转变与珠光体转变有哪些异同点">💢6.贝氏体转变与珠光体转变有哪些异同点？ </h3>
+<h3 id="7简述固态相变和液固相变的异同点分析这类特点对所形成的组织有何影响">💢7.简述固态相变和液固相变的异同点。分析这类特点对所形成的组织有何影响 </h3>
 <ul>
 <li>热力学角度共同点：
 <ul>
@@ -226,35 +226,35 @@
 </ul>
 </li>
 </ul>
-<h3 id="8根据相图判别合金的使用性能">8.根据相图判别合金的使用性能 </h3>
+<h3 id="8根据相图判别合金的使用性能">💢8.根据相图判别合金的使用性能 </h3>
 <ul>
 <li><img src="./index_files/2023-10-12-19-35-25.png" alt="1"></li>
 </ul>
-<h3 id="9由结晶过程建立冷却曲线的规则">9.由结晶过程建立冷却曲线的规则 </h3>
+<h3 id="9由结晶过程建立冷却曲线的规则">💢9.由结晶过程建立冷却曲线的规则 </h3>
 <ul>
 <li><img src="./index_files/2023-10-12-19-37-29.png" alt="1"></li>
 </ul>
-<h2 id="-2005">⚑ 2005 </h2>
-<h3 id="1界面能">1.界面能 </h3>
+<h2 id="-2005">🧐 2005 </h2>
+<h3 id="1界面能">💢1.界面能 </h3>
 <pre class="language-text">理想的完全共格界面，只有在孪晶界，且孪晶界即为孪晶面时才可能存在。
 </pre>
-<h3 id="2伪共晶区">2.伪共晶区 </h3>
+<h3 id="2伪共晶区">💢2.伪共晶区 </h3>
 <pre class="language-text">伪共晶区偏向高熔点方向
 </pre>
 <ul>
 <li><img src="./index_files/2023-10-12-19-06-25.png" alt="1"></li>
 </ul>
-<h2 id="-2006">⚑ 2006 </h2>
-<h3 id="1六方密排的致密度的计算">1.六方密排的致密度的计算 </h3>
+<h2 id="-2006">🧐 2006 </h2>
+<h3 id="1六方密排的致密度的计算">💢1.六方密排的致密度的计算 </h3>
 <ul>
 <li><img src="./index_files/2023-10-18-18-04-06.png" alt="1"></li>
 </ul>
-<h3 id="2间隙固溶体-间隙相-间隙化合物的区别">2.间隙固溶体、间隙相、间隙化合物的区别 </h3>
+<h3 id="2间隙固溶体-间隙相-间隙化合物的区别">💢2.间隙固溶体、间隙相、间隙化合物的区别 </h3>
 <ul>
 <li>溶质原子分布于溶剂间隙而形成的固溶体称为间隙固溶体。<strong>形成间隙固溶体的溶质原子通常是原子半径小于0.1nm的非金属元素</strong>，H、B、C、N、O等。间隙固溶体保持母相（溶剂）的晶体结构，成分在一定范围内变化，<strong>不能用分子式表示</strong>。</li>
 <li>间隙相和间隙化合物属于原子尺寸占主导地位的中间相，也为半径小于0.1nm的非金属元素占据晶格间隙。它们的晶体结构不同于任何一个组成相，成分在一定范围内波动，<strong>但是组成它们的组元大致都有一定的原子组成比</strong>，可用分子式表示。</li>
 </ul>
-<h3 id="3铁碳相图三大恒温转变的反应式-反应温度-反应类型">3.铁碳相图三大恒温转变的反应式、反应温度、反应类型 </h3>
+<h3 id="3铁碳相图三大恒温转变的反应式-反应温度-反应类型">💢3.铁碳相图三大恒温转变的反应式、反应温度、反应类型 </h3>
 <table>
 <thead>
 <tr>
@@ -281,7 +281,7 @@
 </tr>
 </tbody>
 </table>
-<h3 id="4比较非均匀形核和均匀形核的区别">4.比较非均匀形核和均匀形核的区别 </h3>
+<h3 id="4比较非均匀形核和均匀形核的区别">💢4.比较非均匀形核和均匀形核的区别 </h3>
 <ul>
 <li>相同点
 <ul>
@@ -302,17 +302,17 @@
 </ul>
 </li>
 </ul>
-<h2 id="2007">⚑2007 </h2>
-<h3 id="1孪晶">1.孪晶 </h3>
+<h2 id="2007">🧐2007 </h2>
+<h3 id="1孪晶">💢1.孪晶 </h3>
 <ul>
 <li><strong>在切应力的作用下，晶体的一部分沿着特定的晶面（孪生面）和晶向（孪生方向）相对于晶体的另一部分作均匀切变时所产生的变形</strong>。孪生变形后两部分的晶体取向不同，恰好以孪生面作为对称轴面形成镜像对称，形成孪晶。</li>
 <li><img src="./index_files/2023-10-18-19-59-56.png" alt="1"></li>
 </ul>
-<h3 id="2铃木气团">2.铃木气团 </h3>
+<h3 id="2铃木气团">💢2.铃木气团 </h3>
 <ul>
 <li>层错与溶质原子发生交互作用，使<strong>层错附近的溶质浓度不同于基体的溶质浓度</strong>，这种现象称为铃木效应。当溶质原子偏聚在层错附近，使其<strong>溶质浓度大于基体中浓度时，即形成了铃木气团</strong>。</li>
 </ul>
-<h3 id="3变形织构有哪几种类型对材料性能有何影响如何消除">3.变形织构有哪几种类型，对材料性能有何影响？如何消除？ </h3>
+<h3 id="3变形织构有哪几种类型对材料性能有何影响如何消除">💢3.变形织构有哪几种类型，对材料性能有何影响？如何消除？ </h3>
 <ul>
 <li><strong>丝织构、板织构</strong></li>
 <li>造成材料性能产生显著的各向异性。</li>
@@ -323,7 +323,7 @@
 </ul>
 </li>
 </ul>
-<h3 id="4比较位错滑移与孪生的区别与联系">4.比较位错滑移与孪生的区别与联系 </h3>
+<h3 id="4比较位错滑移与孪生的区别与联系">💢4.比较位错滑移与孪生的区别与联系 </h3>
 <ul>
 <li><strong>相同点</strong>
 <ul>
@@ -342,27 +342,27 @@
 </ul>
 </li>
 </ul>
-<h3 id="5成分偏析的种类及产生机理">5.成分偏析的种类及产生机理 </h3>
+<h3 id="5成分偏析的种类及产生机理">💢5.成分偏析的种类及产生机理 </h3>
 <h4 id="1微观偏析">（1）微观偏析 </h4>
 <ul>
 <li>①<strong>枝晶偏析</strong></li>
 <li>②<strong>胞状偏析</strong></li>
 <li>③<strong>晶界偏析</strong></li>
 </ul>
-<h3 id="2宏观偏析">（2）宏观偏析 </h3>
+<h3 id="2宏观偏析">💢（2）宏观偏析 </h3>
 <ul>
 <li>①<strong>正偏析</strong></li>
 <li>②<strong>反偏析</strong></li>
 <li>③<strong>比重偏析</strong></li>
 </ul>
-<h3 id="6论述界面能对析出相的形貌影响">6.论述界面能对析出相的形貌影响 </h3>
+<h3 id="6论述界面能对析出相的形貌影响">💢6.论述界面能对析出相的形貌影响 </h3>
 <ul>
 <li>①<strong>单相组织</strong>：界面平直化与转动。减小界面能；界面平衡的热力学，达到平衡时，晶界夹角均为120°。</li>
 <li>②<strong>复相组织</strong>：第二相分布在基体晶粒内时，若相界的界面能无明显各向异性，则第二相为球状，这样界面面积最小，总相界能也最小。若相的界面能有明显的各向异性，则第二相将形成以低能量晶面为相界的多面体。</li>
 <li>第二相分布基体两晶粒的晶界上时，如果两相间形成非共格界面，当第二相位于基体的晶面上时，常呈双凸透镜的形貌，此时第二相的具体形状与界面能有密切关系。如果α、β两相间形成共格或半共格界面，则因为界面两侧的α相晶粒有不同的位向，所以β相如果和第一个α相晶粒形成共格或半共格界面，则和第二个α相晶粒就不能共格。常见的情况是一个α晶粒形成平直的共格或半共格界面，而另一个α晶粒形成光滑的非共格界面。</li>
 </ul>
-<h2 id="2008">⚑2008 </h2>
-<h3 id="1写出fcc-bcc-hcp晶体的密排面-密排面间距-密排方向-密排方向最小原子间距">1.写出FCC、BCC、HCP晶体的密排面、密排面间距、密排方向、密排方向最小原子间距 </h3>
+<h2 id="2008">🧐2008 </h2>
+<h3 id="1写出fcc-bcc-hcp晶体的密排面-密排面间距-密排方向-密排方向最小原子间距">💢1.写出FCC、BCC、HCP晶体的密排面、密排面间距、密排方向、密排方向最小原子间距 </h3>
 <table>
 <thead>
 <tr>
@@ -397,7 +397,7 @@
 </tr>
 </tbody>
 </table>
-<h3 id="2影响固溶度的因素">2.影响固溶度的因素 </h3>
+<h3 id="2影响固溶度的因素">💢2.影响固溶度的因素 </h3>
 <ul>
 <li>①<strong>晶体结构</strong>：晶体结构相同是组元间形成无限固溶体的必要条件。</li>
 <li>②<strong>原子尺寸因素</strong>：原子半径差△r&lt;15%时，有利于形成固溶度较大的固溶体；而当△r&gt;15%时，△r越大，则溶解度越小。</li>
@@ -411,52 +411,50 @@
 </li>
 <li>⑤影响固溶度的因素除了上述讨论的因素外，固溶度还与<strong>温度</strong>有关，在大多数情况下，温度升高，固溶度升高；而对少数含有 间相的复杂合金，情况则相反。</li>
 </ul>
-<h2 id="2009">⚑2009 </h2>
-<h3 id="1点阵常数">1.点阵常数 </h3>
+<h2 id="2009">🧐2009 </h2>
+<h3 id="1点阵常数">💢1.点阵常数 </h3>
 <ul>
 <li>晶胞的大小取决其三条棱的长度a、b和c，而晶胞形状取决于这些棱之间的夹角α、β、Υ，将a，b，c三个参量称为点阵常数</li>
 </ul>
-<h3 id="2伯氏矢量">2.伯氏矢量 </h3>
+<h3 id="2伯氏矢量">💢2.伯氏矢量 </h3>
 <ul>
 <li><strong>用来描述位错引起晶格畸变的物理量</strong>。该矢量的模是位错的强度，表示晶格总畸变的大小，其方向表示晶格点阵畸变的方向。一般情况下，该矢量越大，晶体畸变的程度越大。</li>
 </ul>
-<h3 id="3玻璃转变温度">3.玻璃转变温度 </h3>
+<h3 id="3玻璃转变温度">💢3.玻璃转变温度 </h3>
 <ul>
 <li>如果材料从液相的冷却速度很大，使结晶的形核生长来不及进行，则可以避开结晶，在熔点以下以过冷液体的形式继续冷却。当温度降至某一温度T<sub>g</sub>以下时，液相的粘度大大增加，原子迁移难而处于“冻结”状态，结晶过程被抑制进入了玻璃态，这一温度T<sub>g</sub>称为玻璃转变温度</li>
 </ul>
-<h3 id="4临界分切应力">4.临界分切应力 </h3>
+<h3 id="4临界分切应力">💢4.临界分切应力 </h3>
 <ul>
 <li>晶体的滑移是在切应力作用下进行的，但其中许多滑移系并非同时参与滑移，而只有当外力在某一滑移系中的分切应力达到一定的临界值时，该滑移系方可首先发生滑移，该分切应力称为滑移的临界分切应力。</li>
 </ul>
-<h3 id="5聚合物的构型">5.聚合物的构型 </h3>
+<h3 id="5聚合物的构型">💢5.聚合物的构型 </h3>
 <ul>
 <li>是指在分子中由化学键所固定的几何排列，这种排列是稳定的，要改变构型必须通过化学键重组和断裂</li>
 </ul>
-<h3 id="6热固性聚合物">6.热固性聚合物 </h3>
+<h3 id="6热固性聚合物">💢6.热固性聚合物 </h3>
 <ul>
 <li><strong>许多线型或支链型大分子由化学键连接而成的交联体型聚合物</strong>，许多大分子键合在一起，形成三维网状结构，已无单个大分子可言。这类聚合物受热不软化，也不易被溶剂所溶胀，称为热固性聚合物。</li>
 <li><strong>特性</strong>：比热塑性聚合物具有更高的硬度、强度，脆性大，但有尺寸稳定性。</li>
+<li><strong>例子</strong>：酚醛塑料、环氧树脂</li>
 </ul>
-<h3 id="7热塑性聚合物">7.热塑性聚合物 </h3>
+<h3 id="7热塑性聚合物">💢7.热塑性聚合物 </h3>
 <ul>
-<li>
-<p>聚合物大分子之间以<strong>物理力</strong>聚合而成，加热时可熔化，并能溶于适当的溶剂中。受热时可塑化，冷却时则可以固化成型，并且可以反复进行。</p>
-</li>
-<li>
-<p><strong>特性</strong>：较好的塑性和冲击韧性。</p>
-</li>
+<li>聚合物大分子之间以<strong>物理力</strong>聚合而成，加热时可熔化，并能溶于适当的溶剂中。受热时可塑化，冷却时则可以固化成型，并且可以反复进行。</li>
+<li><strong>特性</strong>：较好的塑性和冲击韧性。</li>
+<li><strong>例子</strong>：聚乙烯、聚丙烯、ABS塑料</li>
 </ul>
-<h3 id="8什么是键能曲线利用键能曲线可以得到材料的哪些特征参量采用哪些方法可以改变键能曲线的形状">8.什么是键能曲线？利用键能曲线可以得到材料的哪些特征参量？采用哪些方法可以改变键能曲线的形状？ </h3>
+<h3 id="8什么是键能曲线利用键能曲线可以得到材料的哪些特征参量采用哪些方法可以改变键能曲线的形状">💢8.什么是键能曲线？利用键能曲线可以得到材料的哪些特征参量？采用哪些方法可以改变键能曲线的形状？ </h3>
 <p><img src="./index_files/2023-10-21-19-59-44.png" alt="1"></p>
-<h3 id="9离子晶体中的扩散机制有哪些影响因素有哪些">9.离子晶体中的扩散机制有哪些？影响因素有哪些？ </h3>
+<h3 id="9离子晶体中的扩散机制有哪些影响因素有哪些">💢9.离子晶体中的扩散机制有哪些？影响因素有哪些？ </h3>
 <ul>
 <li>离子扩散的机制是空位机制，离子晶体的扩散离子只能进入相同电荷的位置而不能进入相邻异类离子的位置，离子扩散只能依靠空位进行。</li>
 <li><strong>影响因素</strong>：空位浓度</li>
 </ul>
-<h3 id="11试从结合键的角度分析工程材料的分类及特点">11.试从结合键的角度分析工程材料的分类及特点 </h3>
+<h3 id="11试从结合键的角度分析工程材料的分类及特点">💢11.试从结合键的角度分析工程材料的分类及特点 </h3>
 <h4 id="1金属材料">(1)金属材料 </h4>
 <ul>
-<li>简单金属(指元素周期来上的主族元素)的结合键完全为金属键，过渡族金属的结合键为金属键和共价键的混合，但以金属键为主。</li>
+<li>简单金属(指元素周期表上的主族元素)的结合键完全为金属键，过渡族金属的结合键为金属键和共价键的混合，但以金属键为主。</li>
 <li><strong>特点</strong>：大多数金属强度和硬度较高，塑性较好。由于金属键既无方向性，又无饱和性，因而每个原子都趋向于和更多的原子结合，并形成密维结构。当金属受力变形而改变原子之间的相互位置时不至于破坏金属键，这就使得金属具有良好的延展性。由于自由电子的存在，所以大部分金属有良好的导电导热性能。</li>
 </ul>
 <h4 id="2陶瓷材料">(2)陶瓷材料 </h4>
@@ -474,20 +472,20 @@
 <li>由两种或两种以上物理和化学性质不同的材料组合而成。</li>
 <li><strong>特点</strong>：结合键种类繁多，非常复杂，性能差异大。</li>
 </ul>
-<h2 id="2010838">⚑2010（838） </h2>
-<h3 id="1杠杆定律">1.杠杆定律 </h3>
+<h2 id="2010838">🧐2010（838） </h2>
+<h3 id="1杠杆定律">💢1.杠杆定律 </h3>
 <ul>
 <li>某一成分的二元合金在某温度时，处于二元相图的两相区内，则两相之间的质量比可用“杠杆法则”求得。在此温度处做一条水平线与该两相区的相界线相交，两个交点内水平线被合金的成分垂线分成两段，两相的质量比与这两线段的长度成反比，用相对百分数表示，这个现象好像力学中的杠杆，所以称为“杠杆定律”。</li>
 </ul>
-<h3 id="2位错滑移">2.位错滑移 </h3>
+<h3 id="2位错滑移">💢2.位错滑移 </h3>
 <ul>
 <li>是在外加切应力的作用下，通过位错中心附近的原子沿伯氏矢量方向在滑移面上不断地作少量的位移(小于一个原子间距)而逐步实现的，这样的运动方式称为位错的滑移。</li>
 </ul>
-<h3 id="3网络修饰体">3.网络修饰体 </h3>
+<h3 id="3网络修饰体">💢3.网络修饰体 </h3>
 <ul>
-<li>满足扎卡赖亚森规则的氧化物能形成大面积的三维玻璃网络，其中不能形成大的一次键网的氧化物称作网络修饰体。</li>
+<li>满足扎卡赖亚森规则的氧化物能形成大面积的三维玻璃网络，称为网络形成体。其中不能形成大的一次键网的氧化物称作网络修饰体。</li>
 </ul>
-<h3 id="4说明离子晶体-共价晶体和金属晶体中原子间的键合特征影响原子间成键类型的重要因素有哪些">4.说明离子晶体、共价晶体和金属晶体中原子间的键合特征。影响原子间成键类型的重要因素有哪些？ </h3>
+<h3 id="4说明离子晶体-共价晶体和金属晶体中原子间的键合特征影响原子间成键类型的重要因素有哪些">💢4.说明离子晶体、共价晶体和金属晶体中原子间的键合特征。影响原子间成键类型的重要因素有哪些？ </h3>
 <ul>
 <li>(1)离子晶体中主要为离子键，共价晶体中主要为共价键，金属晶体中主要是金属键</li>
 <li>(2)影响原子间成键类型的重要因素：<strong>电负性、价电子数</strong>。
@@ -498,67 +496,76 @@
 </ul>
 </li>
 </ul>
-<h3 id="5什么是面缺陷">5.什么是面缺陷？ </h3>
+<h3 id="5什么是面缺陷">💢5.什么是面缺陷？ </h3>
 <ul>
 <li>面缺陷，其特征是在一个方向上尺寸很小，另外两个方向上扩展很大，也称二维缺陷。<strong>晶界、相界、孪晶界和堆垛层错等都属于面缺陷</strong></li>
 </ul>
-<h3 id="6晶体结构与空间点阵的关系">6.晶体结构与空间点阵的关系 </h3>
+<h3 id="6晶体结构与空间点阵的关系">💢6.晶体结构与空间点阵的关系 </h3>
 <ul>
 <li><strong>空间点阵是晶体中质点点阵的具体抽象</strong>，用以描述和分析晶体结构的周期性和对称性，由于各质点周围环境相同，它只有14种类型；</li>
 <li><strong>而晶体结构则是指晶体中实际质点的排列情况</strong>，它们能组成各种类型的结构，因此，实际存在的晶体结构是无限的。</li>
 </ul>
-<h3 id="7什么是晶体中的原子配位数影响配位数多少的因素是什么">7.什么是晶体中的原子配位数？影响配位数多少的因素是什么？ </h3>
+<h3 id="7什么是晶体中的原子配位数影响配位数多少的因素是什么">💢7.什么是晶体中的原子配位数？影响配位数多少的因素是什么？ </h3>
 <ul>
 <li>晶体中原子的配位数是<strong>反映原子排列紧密程度的物理量之一</strong>，指晶格中任一原子周围与其最近邻且等距离的原子数目。<strong>一般配位数越大，晶体排列结构越紧密。</strong></li>
 <li><strong>影响配位数的因素</strong>如下：
 <ul>
 <li>①<strong>中心原子的大小</strong>。中心原子的最高配位数决定于它在周期表中的周次。</li>
 <li>②<strong>中心原子的电荷</strong>。中心原子的电荷高，配位数就大。</li>
-<li>③<strong>配体的性质</strong>。同一氧化态的金属离子的配位数不是固定不变的，还取</li>
+<li>③<strong>配体的性质</strong>。同一氧化态的金属离子的配位数不是固定不变的，还取决于配体的性质</li>
 </ul>
 </li>
 </ul>
-<h3 id="8在氧化物陶瓷中掺杂其他氧化物时氧空位浓度如何变化">8.在氧化物陶瓷中掺杂其他氧化物时，氧空位浓度如何变化? </h3>
+<h3 id="8在氧化物陶瓷中掺杂其他氧化物时氧空位浓度如何变化">💢8.在氧化物陶瓷中掺杂其他氧化物时，氧空位浓度如何变化? </h3>
 <ul>
 <li>当高价离子置换低价离子形成置换固溶体时，产生阳离子空位，氧空位浓度减少；当低价离子置换高价离子形成置换固溶体时，产生阴离子空位，氧空位浓度增加。</li>
 </ul>
-<h3 id="9影响聚合物结晶的因素有哪些">9.影响聚合物结晶的因素有哪些？ </h3>
+<h3 id="9影响聚合物结晶的因素有哪些">💢9.影响聚合物结晶的因素有哪些？ </h3>
 <ul>
-<li>①<strong>侧基尺寸</strong>：具有尺寸和容积大的侧基的聚合物不能有效地堆垛，所以很难形成晶体。这样，可以推想聚丙烯比聚乙烯更不易结晶，但却比聚苯乙烯易结晶，因为CH<sub>3</sub>比H原子大比C<sub>6</sub>H<sub>5</sub>团小。</li>
+<li>①<strong>侧基尺寸</strong>：具有尺寸和容积大的侧基的聚合物不能有效地堆垛，所以很难形成晶体。
+<ul>
+<li>这样，可以推想聚丙烯比聚乙烯更不易结晶，但却比聚苯乙烯易结晶，因为CH<sub>3</sub>比H原子大比C<sub>6</sub>H<sub>5</sub>团小。</li>
+</ul>
+</li>
 <li>②<strong>链的分支</strong>：一个链的分支位于主链的骨架上，在那里主链骨架上的一个侧基被一个“分支”的骨架原子取代。它可能是在聚合过程中发生的“缺陷”或者也可能是有意长成的。有分支的链要比无分链形成晶体要难得多。</li>
-<li>③<strong>立构规整度</strong>：具有大的侧基的无规立构聚合物，它不容易排列成晶态材料所要求的建立长程有序(LRO)的方式。相反，全同立构和间同立构聚合物建立LRO要容易的多，所以这些聚合物很可能是半晶态，如链分支的情况一样，立构规整度对结晶的影响最终也影响聚含物的宏观性质。例如，在室温的全同立构聚丙烯(约50%的晶态)是硬度和刚度最大的，而无规立构PP(约0%晶态)则是无用的粘性物质。</li>
+<li>③<strong>立构规整度</strong>：具有大的侧基的无规立构聚合物，它不容易排列成晶态材料所要求的建立长程有序(LRO)的方式。相反，全同立构和间同立构聚合物建立LRO要容易的多，所以这些聚合物很可能是半晶态，如链分支的情况一样，立构规整度对结晶的影响最终也影响聚含物的宏观性质。
+<ul>
+<li>例如，在室温的全同立构聚丙烯(约50%的晶态)是硬度和刚度最大的，而无规立构PP(约0%晶态)则是无用的粘性物质。</li>
+</ul>
+</li>
 <li>④<strong>重复单元的复杂性</strong>：具有长的重复单元(像PET和很多尼龙那样)的聚合物。要求更大的链段移动来建立LRO，如果是这样，他们同样地晶化很慢，用中等的淬冷速度就可以形成玻璃。</li>
 <li>⑤<strong>链间的二次键</strong>：前面我们所列的因素都是阻碍晶体形成的，相反，有在小的、规则的空间极性侧基，它们提供了与相邻链段对齐排列的驱动力，从而有助于聚合物晶体的形成。</li>
 </ul>
-<h3 id="10面缺陷的种类及对材料力学性能的影响">10.面缺陷的种类及对材料力学性能的影响 </h3>
+<h3 id="10面缺陷的种类及对材料力学性能的影响">💢10.面缺陷的种类及对材料力学性能的影响 </h3>
 <ul>
-<li>面缺陷的种类繁多，金属晶体中的面缺陷主要有两种：<strong>晶界和亚晶界</strong>。结构复杂，对于晶体的物理性能有着广泛的影响。晶体中相邻畴区间的交接往往不是任意的，通常只有那些点阵匹配度较好，具有特定形态及结构，因而界面能较低的面缺陷能够存在。人们通常按界面两侧晶体结构之间的关系将其分为平移界面、李晶界面及晶粒间界三大类别。</li>
+<li>面缺陷的种类繁多，金属晶体中的面缺陷主要有两种：<strong>晶界和亚晶界</strong>。结构复杂，对于晶体的物理性能有着广泛的影响。晶体中相邻畴区间的交接往往不是任意的，通常只有那些点阵匹配度较好，具有特定形态及结构，因而界面能较低的面缺陷能够存在。人们通常按界面两侧晶体结构之间的关系将其分为<strong>平移界面、孪晶界面及晶粒间界</strong>三大类别。</li>
 <li><strong>界面阻碍位错运动，引起界面强化，材料强度上升，界面阻碍变形使得变形分布均匀，使得材料塑性在一定程度上上升，强度和塑性的上升使得材料韧性改善</strong></li>
-<li>但是界面的存在， 也可能使不同晶粒取向明显不同，导致不同晶粒变形程度不同 晶界易发生应力集中，晶间断裂。</li>
+<li>但是界面的存在， <strong>也可能使不同晶粒取向明显不同，导致不同晶粒变形程度不同 晶界易发生应力集中，晶间断裂</strong>。</li>
 </ul>
-<h2 id="2010839">⚑2010（839） </h2>
-<h3 id="1面密度">1.面密度 </h3>
+<h2 id="2010839">🧐2010（839） </h2>
+<h3 id="1面密度">💢1.面密度 </h3>
 <ul>
 <li>晶面中某一晶面单位面积上的原子数目</li>
 </ul>
-<h3 id="2自扩散">2.自扩散 </h3>
+<h3 id="2自扩散">💢2.自扩散 </h3>
 <ul>
 <li>不依赖浓度梯度，仅由热振动而产生的扩散</li>
 </ul>
-<h3 id="3fcc-bcc-hcp的间隙位置及个数">3.FCC、BCC、HCP的间隙位置及个数 </h3>
-<h3 id="4简述位错的关键特征">4.简述位错的关键特征 </h3>
+<h3 id="3fcc-bcc-hcp的间隙位置及个数">💢3.FCC、BCC、HCP的间隙位置及个数 </h3>
+<h3 id="4简述位错的关键特征">💢4.简述位错的关键特征 </h3>
 <ul>
 <li>①位错的类型由它的柏氏矢量及位错线间的关系定义。</li>
 <li>②位错可在包含柏氏矢量和位错线的面上滑移。</li>
 <li>③柏氏矢量是固定的，一个位错的特征可各不相同，但矢量是一样的。</li>
 <li>④一根位错线不能终止于晶体内部，而只能露头于晶体表面(包括晶界)，若它终止于晶体内部，则必与其他位错线相连接，或在晶体内部形成封闭线，形成封闭线的位错称为位错环。</li>
 </ul>
-<h3 id="5简述橡胶的弹性模量为何比陶瓷或氧化物玻璃低得多">5.简述橡胶的弹性模量为何比陶瓷或氧化物玻璃低得多？ </h3>
+<h3 id="5简述橡胶的弹性模量为何比陶瓷或氧化物玻璃低得多">💢5.简述橡胶的弹性模量为何比陶瓷或氧化物玻璃低得多？ </h3>
 <ul>
+<li>弹性模量代表着原子离开平衡位置的难易程度，是表征原子间结合力强弱的物理量，结合键能是影响弹性模量的主要因素，结合键之间的结合能越大，则弹性模量越大。</li>
 <li>因为橡胶分子间主要靠范德华力或硫键结合，其结合力较小，而陶瓷或氧化物玻璃主要靠共价键、离子键结合，其结合力较大，结构稳定，不易变形，所以橡胶的弹性模量低得多。</li>
 </ul>
-<h3 id="6材料熔点的判断规则">6.材料熔点的判断规则 </h3>
-<h3 id="7试述休姆-罗德里hume-rothery规则的内容及意义">7.试述休姆-罗德里（Hume-Rothery）规则的内容及意义 </h3>
+<h3 id="6材料熔点的判断规则">💢6.材料熔点的判断规则 </h3>
+<h3 id="7试述休姆-罗德里hume-rothery规则的内容及意义">💢7.试述休姆-罗德里（Hume-Rothery）规则的内容及意义 </h3>
 <ul>
 <li>①溶质和溶剂的尺寸差必须不大于15%。</li>
 <li>②溶质、溶剂原子的电负性必须相当。</li>
@@ -566,13 +573,24 @@
 <li>④溶质，溶剂晶体结构必须一样。</li>
 <li>意义：可以根据此规则来判断任意两组元是否能形成置换固溶体。</li>
 </ul>
-<h3 id="8分析原子扩散在金属材料中的应用">8.分析原子扩散在金属材料中的应用 </h3>
+<h3 id="8分析原子扩散在金属材料中的应用">💢8.分析原子扩散在金属材料中的应用 </h3>
 <ul>
 <li>原子扩散在材料中的影响包括晶体凝固时形核、长大；合金的成分过冷，成分均匀化，包晶反应非平衡凝固时保留高温组织的特点，固态相变时的形核，晶界形核、晶界运动、晶界偏聚、高温蠕变，氧化，焊接，化学热处理(渗C、N等)、粉末冶金，涂层等。</li>
-<li>固溶强化：合金元素通过扩散形成间隙固溶体或置换固溶体，达到强化金属的目的。</li>
+<li>①<strong>固溶强化</strong>：合金元素通过扩散形成间隙固溶体或置换固溶体，达到强化金属的目的。
+<ul>
 <li>例如C、Cr等元素的作用</li>
 </ul>
-<h3 id="9论述三种玻璃离子玻璃-共价玻璃-以及金属玻璃的主要成分和形成条件">9.论述三种玻璃（离子玻璃、共价玻璃、以及金属玻璃）的主要成分和形成条件 </h3>
+</li>
+<li>②<strong>时效强化</strong>：合金中的元素通过扩散，在金属基体中偏聚，形成第二相强化金属。
+<ul>
+<li>例如Cu—Al合金</li>
+</ul>
+</li>
+<li>③<strong>扩散焊接</strong>：两种不同的材料通过扩散达到焊接的目的，多在HIP（热等压）条件下进行。</li>
+<li>④<strong>热处理</strong></li>
+<li>⑤<strong>固态烧结</strong></li>
+</ul>
+<h3 id="9论述三种玻璃离子玻璃-共价玻璃-以及金属玻璃的主要成分和形成条件">💢9.论述三种玻璃（离子玻璃、共价玻璃、以及金属玻璃）的主要成分和形成条件 </h3>
 <h4 id="1离子玻璃">(1)离子玻璃 </h4>
 <ul>
 <li>主要是氧化物玻璃</li>
